// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`effective rule set node / stylistic 1`] = `
[
  "@stylistic/array-bracket-newline: warn",
  "@stylistic/array-bracket-spacing: warn",
  "@stylistic/array-element-newline: warn",
  "@stylistic/arrow-parens: warn",
  "@stylistic/arrow-spacing: warn",
  "@stylistic/block-spacing: warn",
  "@stylistic/brace-style: warn",
  "@stylistic/comma-dangle: warn",
  "@stylistic/comma-spacing: warn",
  "@stylistic/comma-style: warn",
  "@stylistic/computed-property-spacing: warn",
  "@stylistic/curly-newline: warn",
  "@stylistic/dot-location: warn",
  "@stylistic/eol-last: warn",
  "@stylistic/function-call-argument-newline: warn",
  "@stylistic/function-call-spacing: warn",
  "@stylistic/function-paren-newline: warn",
  "@stylistic/generator-star-spacing: warn",
  "@stylistic/implicit-arrow-linebreak: warn",
  "@stylistic/indent-binary-ops: warn",
  "@stylistic/indent: warn",
  "@stylistic/jsx-child-element-spacing: error",
  "@stylistic/jsx-closing-bracket-location: warn",
  "@stylistic/jsx-closing-tag-location: warn",
  "@stylistic/jsx-curly-brace-presence: warn",
  "@stylistic/jsx-curly-newline: warn",
  "@stylistic/jsx-curly-spacing: warn",
  "@stylistic/jsx-equals-spacing: warn",
  "@stylistic/jsx-first-prop-new-line: warn",
  "@stylistic/jsx-function-call-newline: warn",
  "@stylistic/jsx-indent-props: warn",
  "@stylistic/jsx-max-props-per-line: error",
  "@stylistic/jsx-one-expression-per-line: warn",
  "@stylistic/jsx-pascal-case: error",
  "@stylistic/jsx-quotes: warn",
  "@stylistic/jsx-self-closing-comp: warn",
  "@stylistic/jsx-sort-props: warn",
  "@stylistic/jsx-tag-spacing: warn",
  "@stylistic/jsx-wrap-multilines: warn",
  "@stylistic/key-spacing: warn",
  "@stylistic/keyword-spacing: warn",
  "@stylistic/line-comment-position: warn",
  "@stylistic/linebreak-style: warn",
  "@stylistic/lines-around-comment: warn",
  "@stylistic/lines-between-class-members: warn",
  "@stylistic/max-len: error",
  "@stylistic/max-statements-per-line: error",
  "@stylistic/member-delimiter-style: warn",
  "@stylistic/multiline-ternary: warn",
  "@stylistic/new-parens: warn",
  "@stylistic/newline-per-chained-call: warn",
  "@stylistic/no-confusing-arrow: warn",
  "@stylistic/no-extra-parens: warn",
  "@stylistic/no-extra-semi: warn",
  "@stylistic/no-floating-decimal: warn",
  "@stylistic/no-mixed-operators: error",
  "@stylistic/no-mixed-spaces-and-tabs: error",
  "@stylistic/no-multi-spaces: warn",
  "@stylistic/no-multiple-empty-lines: warn",
  "@stylistic/no-tabs: error",
  "@stylistic/no-trailing-spaces: warn",
  "@stylistic/no-whitespace-before-property: warn",
  "@stylistic/nonblock-statement-body-position: warn",
  "@stylistic/object-curly-newline: warn",
  "@stylistic/object-curly-spacing: warn",
  "@stylistic/object-property-newline: warn",
  "@stylistic/one-var-declaration-per-line: warn",
  "@stylistic/operator-linebreak: warn",
  "@stylistic/padded-blocks: warn",
  "@stylistic/padding-line-between-statements: warn",
  "@stylistic/quote-props: warn",
  "@stylistic/quotes: warn",
  "@stylistic/rest-spread-spacing: warn",
  "@stylistic/semi-spacing: warn",
  "@stylistic/semi-style: warn",
  "@stylistic/semi: warn",
  "@stylistic/space-before-blocks: warn",
  "@stylistic/space-before-function-paren: warn",
  "@stylistic/space-in-parens: warn",
  "@stylistic/space-infix-ops: warn",
  "@stylistic/space-unary-ops: warn",
  "@stylistic/spaced-comment: warn",
  "@stylistic/switch-colon-spacing: warn",
  "@stylistic/template-curly-spacing: warn",
  "@stylistic/template-tag-spacing: warn",
  "@stylistic/type-annotation-spacing: warn",
  "@stylistic/type-generic-spacing: warn",
  "@stylistic/type-named-tuple-spacing: warn",
  "@stylistic/wrap-iife: warn",
  "@stylistic/wrap-regex: warn",
  "@stylistic/yield-star-spacing: warn",
  "@typescript-eslint/adjacent-overload-signatures: error",
  "@typescript-eslint/array-type: error",
  "@typescript-eslint/await-thenable: error",
  "@typescript-eslint/ban-ts-comment: error",
  "@typescript-eslint/ban-tslint-comment: error",
  "@typescript-eslint/class-literal-property-style: error",
  "@typescript-eslint/class-methods-use-this: error",
  "@typescript-eslint/consistent-generic-constructors: error",
  "@typescript-eslint/consistent-indexed-object-style: error",
  "@typescript-eslint/consistent-type-assertions: error",
  "@typescript-eslint/consistent-type-definitions: error",
  "@typescript-eslint/consistent-type-exports: error",
  "@typescript-eslint/consistent-type-imports: error",
  "@typescript-eslint/default-param-last: error",
  "@typescript-eslint/dot-notation: error",
  "@typescript-eslint/explicit-function-return-type: error",
  "@typescript-eslint/explicit-member-accessibility: error",
  "@typescript-eslint/explicit-module-boundary-types: error",
  "@typescript-eslint/member-ordering: error",
  "@typescript-eslint/method-signature-style: error",
  "@typescript-eslint/naming-convention: error",
  "@typescript-eslint/no-array-constructor: error",
  "@typescript-eslint/no-array-delete: error",
  "@typescript-eslint/no-base-to-string: error",
  "@typescript-eslint/no-confusing-non-null-assertion: error",
  "@typescript-eslint/no-confusing-void-expression: error",
  "@typescript-eslint/no-deprecated: error",
  "@typescript-eslint/no-duplicate-enum-values: error",
  "@typescript-eslint/no-duplicate-type-constituents: error",
  "@typescript-eslint/no-dynamic-delete: error",
  "@typescript-eslint/no-empty-function: error",
  "@typescript-eslint/no-empty-object-type: error",
  "@typescript-eslint/no-explicit-any: error",
  "@typescript-eslint/no-extra-non-null-assertion: error",
  "@typescript-eslint/no-extraneous-class: error",
  "@typescript-eslint/no-floating-promises: error",
  "@typescript-eslint/no-for-in-array: error",
  "@typescript-eslint/no-implied-eval: error",
  "@typescript-eslint/no-import-type-side-effects: error",
  "@typescript-eslint/no-inferrable-types: error",
  "@typescript-eslint/no-invalid-this: error",
  "@typescript-eslint/no-invalid-void-type: error",
  "@typescript-eslint/no-loop-func: error",
  "@typescript-eslint/no-meaningless-void-operator: error",
  "@typescript-eslint/no-misused-new: error",
  "@typescript-eslint/no-misused-promises: error",
  "@typescript-eslint/no-misused-spread: error",
  "@typescript-eslint/no-mixed-enums: error",
  "@typescript-eslint/no-namespace: error",
  "@typescript-eslint/no-non-null-asserted-nullish-coalescing: error",
  "@typescript-eslint/no-non-null-asserted-optional-chain: error",
  "@typescript-eslint/no-non-null-assertion: error",
  "@typescript-eslint/no-redundant-type-constituents: error",
  "@typescript-eslint/no-require-imports: error",
  "@typescript-eslint/no-restricted-imports: error",
  "@typescript-eslint/no-shadow: error",
  "@typescript-eslint/no-this-alias: error",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare: error",
  "@typescript-eslint/no-unnecessary-condition: error",
  "@typescript-eslint/no-unnecessary-qualifier: warn",
  "@typescript-eslint/no-unnecessary-template-expression: error",
  "@typescript-eslint/no-unnecessary-type-arguments: error",
  "@typescript-eslint/no-unnecessary-type-constraint: error",
  "@typescript-eslint/no-unnecessary-type-conversion: warn",
  "@typescript-eslint/no-unsafe-argument: error",
  "@typescript-eslint/no-unsafe-assignment: error",
  "@typescript-eslint/no-unsafe-call: error",
  "@typescript-eslint/no-unsafe-declaration-merging: error",
  "@typescript-eslint/no-unsafe-enum-comparison: error",
  "@typescript-eslint/no-unsafe-function-type: error",
  "@typescript-eslint/no-unsafe-member-access: error",
  "@typescript-eslint/no-unsafe-return: error",
  "@typescript-eslint/no-unsafe-unary-minus: error",
  "@typescript-eslint/no-unused-expressions: error",
  "@typescript-eslint/no-unused-vars: error",
  "@typescript-eslint/no-use-before-define: error",
  "@typescript-eslint/no-useless-constructor: error",
  "@typescript-eslint/no-useless-default-assignment: error",
  "@typescript-eslint/no-useless-empty-export: warn",
  "@typescript-eslint/no-wrapper-object-types: error",
  "@typescript-eslint/non-nullable-type-assertion-style: error",
  "@typescript-eslint/only-throw-error: error",
  "@typescript-eslint/parameter-properties: error",
  "@typescript-eslint/prefer-as-const: error",
  "@typescript-eslint/prefer-find: error",
  "@typescript-eslint/prefer-for-of: error",
  "@typescript-eslint/prefer-function-type: error",
  "@typescript-eslint/prefer-includes: error",
  "@typescript-eslint/prefer-literal-enum-member: error",
  "@typescript-eslint/prefer-namespace-keyword: error",
  "@typescript-eslint/prefer-nullish-coalescing: error",
  "@typescript-eslint/prefer-promise-reject-errors: error",
  "@typescript-eslint/prefer-readonly: warn",
  "@typescript-eslint/prefer-reduce-type-parameter: error",
  "@typescript-eslint/prefer-regexp-exec: error",
  "@typescript-eslint/prefer-return-this-type: error",
  "@typescript-eslint/prefer-string-starts-ends-with: error",
  "@typescript-eslint/promise-function-async: error",
  "@typescript-eslint/related-getter-setter-pairs: error",
  "@typescript-eslint/require-array-sort-compare: error",
  "@typescript-eslint/require-await: error",
  "@typescript-eslint/restrict-plus-operands: error",
  "@typescript-eslint/restrict-template-expressions: error",
  "@typescript-eslint/return-await: error",
  "@typescript-eslint/strict-boolean-expressions: error",
  "@typescript-eslint/switch-exhaustiveness-check: error",
  "@typescript-eslint/triple-slash-reference: error",
  "@typescript-eslint/unbound-method: error",
  "@typescript-eslint/unified-signatures: error",
  "@typescript-eslint/use-unknown-in-catch-callback-variable: error",
  "curly: warn",
  "eqeqeq: warn",
  "for-direction: error",
  "import-x/consistent-type-specifier-style: warn",
  "import-x/default: error",
  "import-x/export: error",
  "import-x/extensions: error",
  "import-x/first: warn",
  "import-x/namespace: error",
  "import-x/newline-after-import: warn",
  "import-x/no-absolute-path: warn",
  "import-x/no-amd: error",
  "import-x/no-anonymous-default-export: error",
  "import-x/no-commonjs: error",
  "import-x/no-cycle: error",
  "import-x/no-deprecated: error",
  "import-x/no-duplicates: warn",
  "import-x/no-empty-named-blocks: warn",
  "import-x/no-extraneous-dependencies: error",
  "import-x/no-import-module-exports: warn",
  "import-x/no-mutable-exports: error",
  "import-x/no-named-as-default-member: warn",
  "import-x/no-named-as-default: warn",
  "import-x/no-namespace: warn",
  "import-x/no-relative-packages: warn",
  "import-x/no-self-import: error",
  "import-x/no-unassigned-import: error",
  "import-x/no-unresolved: error",
  "import-x/no-useless-path-segments: warn",
  "import-x/no-webpack-loader-syntax: error",
  "import-x/order: warn",
  "import-x/unambiguous: error",
  "no-async-promise-executor: error",
  "no-case-declarations: error",
  "no-compare-neg-zero: error",
  "no-cond-assign: error",
  "no-constant-binary-expression: error",
  "no-constant-condition: error",
  "no-control-regex: error",
  "no-debugger: error",
  "no-delete-var: error",
  "no-dupe-else-if: error",
  "no-duplicate-case: error",
  "no-empty-character-class: error",
  "no-empty-pattern: error",
  "no-empty-static-block: error",
  "no-empty: error",
  "no-ex-assign: error",
  "no-extra-boolean-cast: error",
  "no-fallthrough: error",
  "no-global-assign: error",
  "no-invalid-regexp: error",
  "no-irregular-whitespace: error",
  "no-loss-of-precision: error",
  "no-misleading-character-class: error",
  "no-nonoctal-decimal-escape: error",
  "no-octal: error",
  "no-prototype-builtins: error",
  "no-regex-spaces: error",
  "no-self-assign: error",
  "no-shadow-restricted-names: error",
  "no-sparse-arrays: error",
  "no-unassigned-vars: error",
  "no-unexpected-multiline: error",
  "no-unsafe-finally: error",
  "no-unsafe-optional-chaining: error",
  "no-unused-labels: error",
  "no-unused-private-class-members: error",
  "no-useless-assignment: error",
  "no-useless-backreference: error",
  "no-useless-catch: error",
  "no-useless-escape: error",
  "no-var: error",
  "prefer-const: error",
  "prefer-rest-params: error",
  "prefer-spread: error",
  "preserve-caught-error: error",
  "require-yield: error",
  "unicorn/better-dom-traversing: error",
  "unicorn/catch-error-name: error",
  "unicorn/consistent-assert: error",
  "unicorn/consistent-compound-words: error",
  "unicorn/consistent-conditional-object-spread: error",
  "unicorn/consistent-date-clone: error",
  "unicorn/consistent-empty-array-spread: error",
  "unicorn/consistent-existence-index-check: error",
  "unicorn/consistent-export-decorator-position: error",
  "unicorn/consistent-function-scoping: error",
  "unicorn/consistent-json-file-read: error",
  "unicorn/consistent-optional-chaining: error",
  "unicorn/consistent-template-literal-escape: error",
  "unicorn/consistent-tuple-labels: error",
  "unicorn/default-export-style: error",
  "unicorn/dom-node-dataset: error",
  "unicorn/empty-brace-spaces: error",
  "unicorn/error-message: error",
  "unicorn/escape-case: error",
  "unicorn/expiring-todo-comments: error",
  "unicorn/explicit-length-check: error",
  "unicorn/explicit-timer-delay: error",
  "unicorn/import-style: error",
  "unicorn/isolated-functions: error",
  "unicorn/logical-assignment-operators: error",
  "unicorn/new-for-builtins: error",
  "unicorn/no-abusive-eslint-disable: error",
  "unicorn/no-accessor-recursion: error",
  "unicorn/no-accidental-bitwise-operator: error",
  "unicorn/no-anonymous-default-export: error",
  "unicorn/no-array-callback-reference: error",
  "unicorn/no-array-concat-in-loop: error",
  "unicorn/no-array-fill-with-reference-type: error",
  "unicorn/no-array-from-fill: error",
  "unicorn/no-array-method-this-argument: error",
  "unicorn/no-array-reduce: error",
  "unicorn/no-array-reverse: error",
  "unicorn/no-array-sort-for-min-max: error",
  "unicorn/no-array-sort: error",
  "unicorn/no-array-splice: error",
  "unicorn/no-async-promise-finally: error",
  "unicorn/no-await-expression-member: error",
  "unicorn/no-await-in-promise-methods: error",
  "unicorn/no-blob-to-file: error",
  "unicorn/no-boolean-sort-comparator: error",
  "unicorn/no-canvas-to-image: error",
  "unicorn/no-chained-comparison: error",
  "unicorn/no-collection-bracket-access: error",
  "unicorn/no-computed-property-existence-check: error",
  "unicorn/no-confusing-array-splice: error",
  "unicorn/no-confusing-array-with: error",
  "unicorn/no-console-spaces: error",
  "unicorn/no-constant-zero-expression: error",
  "unicorn/no-declarations-before-early-exit: error",
  "unicorn/no-document-cookie: error",
  "unicorn/no-double-comparison: error",
  "unicorn/no-duplicate-if-branches: error",
  "unicorn/no-duplicate-logical-operands: error",
  "unicorn/no-duplicate-loops: error",
  "unicorn/no-duplicate-set-values: error",
  "unicorn/no-empty-file: error",
  "unicorn/no-error-property-assignment: error",
  "unicorn/no-exports-in-scripts: error",
  "unicorn/no-for-each: error",
  "unicorn/no-for-loop: error",
  "unicorn/no-global-object-property-assignment: error",
  "unicorn/no-immediate-mutation: error",
  "unicorn/no-impossible-length-comparison: error",
  "unicorn/no-incorrect-query-selector: error",
  "unicorn/no-incorrect-template-string-interpolation: error",
  "unicorn/no-instanceof-builtins: error",
  "unicorn/no-invalid-argument-count: error",
  "unicorn/no-invalid-character-comparison: error",
  "unicorn/no-invalid-fetch-options: error",
  "unicorn/no-invalid-remove-event-listener: error",
  "unicorn/no-invalid-well-known-symbol-methods: error",
  "unicorn/no-late-current-target-access: error",
  "unicorn/no-late-event-control: error",
  "unicorn/no-lonely-if: error",
  "unicorn/no-loop-iterable-mutation: error",
  "unicorn/no-magic-array-flat-depth: error",
  "unicorn/no-mismatched-map-key: error",
  "unicorn/no-misrefactored-assignment: error",
  "unicorn/no-multiple-promise-resolver-calls: error",
  "unicorn/no-named-default: error",
  "unicorn/no-negated-array-predicate: error",
  "unicorn/no-negated-comparison: error",
  "unicorn/no-negation-in-equality-check: error",
  "unicorn/no-nested-ternary: error",
  "unicorn/no-new-array: error",
  "unicorn/no-new-buffer: error",
  "unicorn/no-object-as-default-parameter: error",
  "unicorn/no-object-methods-with-collections: error",
  "unicorn/no-optional-chaining-on-undeclared-variable: error",
  "unicorn/no-process-exit: error",
  "unicorn/no-redundant-comparison: error",
  "unicorn/no-return-array-push: error",
  "unicorn/no-selector-as-dom-name: error",
  "unicorn/no-shorthand-property-overrides: error",
  "unicorn/no-single-promise-in-promise-methods: error",
  "unicorn/no-subtraction-comparison: error",
  "unicorn/no-thenable: error",
  "unicorn/no-this-assignment: error",
  "unicorn/no-this-outside-of-class: error",
  "unicorn/no-transition-all: error",
  "unicorn/no-uncalled-method: error",
  "unicorn/no-undeclared-class-members: error",
  "unicorn/no-unnecessary-array-flat-depth: error",
  "unicorn/no-unnecessary-array-flat-map: error",
  "unicorn/no-unnecessary-array-splice-count: error",
  "unicorn/no-unnecessary-await: error",
  "unicorn/no-unnecessary-boolean-comparison: error",
  "unicorn/no-unnecessary-fetch-options: error",
  "unicorn/no-unnecessary-global-this: error",
  "unicorn/no-unnecessary-nested-ternary: error",
  "unicorn/no-unnecessary-polyfills: error",
  "unicorn/no-unnecessary-slice-end: error",
  "unicorn/no-unnecessary-splice: error",
  "unicorn/no-unnecessary-string-trim: error",
  "unicorn/no-unreadable-array-destructuring: error",
  "unicorn/no-unreadable-for-of-expression: error",
  "unicorn/no-unreadable-iife: error",
  "unicorn/no-unreadable-object-destructuring: error",
  "unicorn/no-unsafe-buffer-conversion: error",
  "unicorn/no-unsafe-promise-all-settled-values: error",
  "unicorn/no-unsafe-property-key: error",
  "unicorn/no-unsafe-sqlite-interpolation: error",
  "unicorn/no-unsafe-string-replacement: warn",
  "unicorn/no-unused-array-method-return: error",
  "unicorn/no-useless-boolean-cast: error",
  "unicorn/no-useless-coercion: error",
  "unicorn/no-useless-collection-argument: error",
  "unicorn/no-useless-compound-assignment: error",
  "unicorn/no-useless-concat: error",
  "unicorn/no-useless-continue: error",
  "unicorn/no-useless-delete-check: error",
  "unicorn/no-useless-else: error",
  "unicorn/no-useless-error-capture-stack-trace: error",
  "unicorn/no-useless-fallback-in-spread: error",
  "unicorn/no-useless-iterator-to-array: error",
  "unicorn/no-useless-length-check: error",
  "unicorn/no-useless-logical-operand: error",
  "unicorn/no-useless-override: error",
  "unicorn/no-useless-promise-resolve-reject: error",
  "unicorn/no-useless-re-export: error",
  "unicorn/no-useless-recursion: error",
  "unicorn/no-useless-spread: error",
  "unicorn/no-useless-switch-case: error",
  "unicorn/no-useless-template-literals: error",
  "unicorn/no-useless-undefined: error",
  "unicorn/no-xor-as-exponentiation: error",
  "unicorn/no-zero-fractions: error",
  "unicorn/number-literal-case: error",
  "unicorn/numeric-separators-style: error",
  "unicorn/operator-assignment: error",
  "unicorn/prefer-abort-signal-any: error",
  "unicorn/prefer-abort-signal-timeout: error",
  "unicorn/prefer-add-event-listener-options: error",
  "unicorn/prefer-add-event-listener: error",
  "unicorn/prefer-aggregate-error: error",
  "unicorn/prefer-array-find: error",
  "unicorn/prefer-array-flat-map: error",
  "unicorn/prefer-array-flat: error",
  "unicorn/prefer-array-from-async: error",
  "unicorn/prefer-array-from-map: error",
  "unicorn/prefer-array-from-range: error",
  "unicorn/prefer-array-index-of: error",
  "unicorn/prefer-array-iterable-methods: error",
  "unicorn/prefer-array-last-methods: error",
  "unicorn/prefer-array-slice: error",
  "unicorn/prefer-array-some: error",
  "unicorn/prefer-bigint-literals: error",
  "unicorn/prefer-blob-reading-methods: error",
  "unicorn/prefer-block-statement-over-iife: error",
  "unicorn/prefer-boolean-return: error",
  "unicorn/prefer-class-fields: error",
  "unicorn/prefer-classlist-toggle: error",
  "unicorn/prefer-code-point: error",
  "unicorn/prefer-continue: error",
  "unicorn/prefer-date-now: error",
  "unicorn/prefer-default-parameters: error",
  "unicorn/prefer-direct-iteration: error",
  "unicorn/prefer-dom-node-append: error",
  "unicorn/prefer-dom-node-remove: error",
  "unicorn/prefer-dom-node-replace-children: error",
  "unicorn/prefer-dom-node-text-content: error",
  "unicorn/prefer-early-return: error",
  "unicorn/prefer-else-if: error",
  "unicorn/prefer-event-target: error",
  "unicorn/prefer-export-from: error",
  "unicorn/prefer-flat-math-min-max: error",
  "unicorn/prefer-get-or-insert-computed: error",
  "unicorn/prefer-global-number-constants: error",
  "unicorn/prefer-global-this: error",
  "unicorn/prefer-group-by: error",
  "unicorn/prefer-has-check: error",
  "unicorn/prefer-hoisting-branch-code: error",
  "unicorn/prefer-identifier-import-export-specifiers: error",
  "unicorn/prefer-includes-over-repeated-comparisons: error",
  "unicorn/prefer-includes: error",
  "unicorn/prefer-iterable-in-constructor: error",
  "unicorn/prefer-iterator-helpers: error",
  "unicorn/prefer-iterator-to-array-at-end: error",
  "unicorn/prefer-keyboard-event-key: error",
  "unicorn/prefer-location-assign: error",
  "unicorn/prefer-logical-operator-over-ternary: error",
  "unicorn/prefer-map-from-entries: error",
  "unicorn/prefer-math-abs: error",
  "unicorn/prefer-math-constants: error",
  "unicorn/prefer-math-min-max: error",
  "unicorn/prefer-math-trunc: error",
  "unicorn/prefer-modern-dom-apis: error",
  "unicorn/prefer-modern-math-apis: error",
  "unicorn/prefer-module: error",
  "unicorn/prefer-native-coercion-functions: error",
  "unicorn/prefer-negative-index: error",
  "unicorn/prefer-node-protocol: error",
  "unicorn/prefer-number-coercion: error",
  "unicorn/prefer-number-is-safe-integer: error",
  "unicorn/prefer-number-properties: error",
  "unicorn/prefer-object-define-properties: error",
  "unicorn/prefer-object-destructuring-defaults: error",
  "unicorn/prefer-object-from-entries: error",
  "unicorn/prefer-object-iterable-methods: error",
  "unicorn/prefer-observer-apis: error",
  "unicorn/prefer-optional-catch-binding: error",
  "unicorn/prefer-path2d: error",
  "unicorn/prefer-private-class-fields: error",
  "unicorn/prefer-promise-with-resolvers: error",
  "unicorn/prefer-prototype-methods: error",
  "unicorn/prefer-query-selector: error",
  "unicorn/prefer-queue-microtask: error",
  "unicorn/prefer-reflect-apply: error",
  "unicorn/prefer-regexp-test: error",
  "unicorn/prefer-response-static-json: error",
  "unicorn/prefer-scoped-selector: error",
  "unicorn/prefer-set-has: error",
  "unicorn/prefer-set-methods: error",
  "unicorn/prefer-set-size: error",
  "unicorn/prefer-simple-condition-first: error",
  "unicorn/prefer-simple-sort-comparator: error",
  "unicorn/prefer-simplified-conditions: error",
  "unicorn/prefer-single-array-predicate: error",
  "unicorn/prefer-single-call: error",
  "unicorn/prefer-single-object-destructuring: error",
  "unicorn/prefer-single-replace: error",
  "unicorn/prefer-smaller-scope: error",
  "unicorn/prefer-string-match-all: error",
  "unicorn/prefer-string-pad-start-end: error",
  "unicorn/prefer-string-raw: error",
  "unicorn/prefer-string-repeat: error",
  "unicorn/prefer-string-replace-all: error",
  "unicorn/prefer-string-slice: error",
  "unicorn/prefer-string-starts-ends-with: error",
  "unicorn/prefer-string-trim-start-end: error",
  "unicorn/prefer-structured-clone: error",
  "unicorn/prefer-switch: error",
  "unicorn/prefer-ternary: warn",
  "unicorn/prefer-toggle-attribute: error",
  "unicorn/prefer-top-level-await: error",
  "unicorn/prefer-type-error: error",
  "unicorn/prefer-type-literal-last: error",
  "unicorn/prefer-uint8array-base64: error",
  "unicorn/prefer-unary-minus: error",
  "unicorn/prefer-unicode-code-point-escapes: error",
  "unicorn/prefer-url-can-parse: error",
  "unicorn/prefer-url-href: error",
  "unicorn/prefer-url-search-parameters: error",
  "unicorn/prefer-while-loop-condition: error",
  "unicorn/relative-url-style: error",
  "unicorn/require-array-join-separator: error",
  "unicorn/require-array-sort-compare: error",
  "unicorn/require-css-escape: error",
  "unicorn/require-module-attributes: error",
  "unicorn/require-module-specifiers: error",
  "unicorn/require-number-to-fixed-digits-argument: error",
  "unicorn/require-passive-events: error",
  "unicorn/require-proxy-trap-boolean-return: error",
  "unicorn/switch-case-break-position: error",
  "unicorn/template-indent: error",
  "unicorn/text-encoding-identifier-case: error",
  "unicorn/throw-new-error: error",
  "unused-imports/no-unused-imports: error",
  "use-isnan: error",
  "valid-typeof: error",
]
`;

exports[`effective rule set node / prettier 1`] = `
[
  "@typescript-eslint/adjacent-overload-signatures: error",
  "@typescript-eslint/array-type: error",
  "@typescript-eslint/await-thenable: error",
  "@typescript-eslint/ban-ts-comment: error",
  "@typescript-eslint/ban-tslint-comment: error",
  "@typescript-eslint/class-literal-property-style: error",
  "@typescript-eslint/class-methods-use-this: error",
  "@typescript-eslint/consistent-generic-constructors: error",
  "@typescript-eslint/consistent-indexed-object-style: error",
  "@typescript-eslint/consistent-type-assertions: error",
  "@typescript-eslint/consistent-type-definitions: error",
  "@typescript-eslint/consistent-type-exports: error",
  "@typescript-eslint/consistent-type-imports: error",
  "@typescript-eslint/default-param-last: error",
  "@typescript-eslint/dot-notation: error",
  "@typescript-eslint/explicit-function-return-type: error",
  "@typescript-eslint/explicit-member-accessibility: error",
  "@typescript-eslint/explicit-module-boundary-types: error",
  "@typescript-eslint/member-ordering: error",
  "@typescript-eslint/method-signature-style: error",
  "@typescript-eslint/naming-convention: error",
  "@typescript-eslint/no-array-constructor: error",
  "@typescript-eslint/no-array-delete: error",
  "@typescript-eslint/no-base-to-string: error",
  "@typescript-eslint/no-confusing-non-null-assertion: error",
  "@typescript-eslint/no-confusing-void-expression: error",
  "@typescript-eslint/no-deprecated: error",
  "@typescript-eslint/no-duplicate-enum-values: error",
  "@typescript-eslint/no-duplicate-type-constituents: error",
  "@typescript-eslint/no-dynamic-delete: error",
  "@typescript-eslint/no-empty-function: error",
  "@typescript-eslint/no-empty-object-type: error",
  "@typescript-eslint/no-explicit-any: error",
  "@typescript-eslint/no-extra-non-null-assertion: error",
  "@typescript-eslint/no-extraneous-class: error",
  "@typescript-eslint/no-floating-promises: error",
  "@typescript-eslint/no-for-in-array: error",
  "@typescript-eslint/no-implied-eval: error",
  "@typescript-eslint/no-import-type-side-effects: error",
  "@typescript-eslint/no-inferrable-types: error",
  "@typescript-eslint/no-invalid-this: error",
  "@typescript-eslint/no-invalid-void-type: error",
  "@typescript-eslint/no-loop-func: error",
  "@typescript-eslint/no-meaningless-void-operator: error",
  "@typescript-eslint/no-misused-new: error",
  "@typescript-eslint/no-misused-promises: error",
  "@typescript-eslint/no-misused-spread: error",
  "@typescript-eslint/no-mixed-enums: error",
  "@typescript-eslint/no-namespace: error",
  "@typescript-eslint/no-non-null-asserted-nullish-coalescing: error",
  "@typescript-eslint/no-non-null-asserted-optional-chain: error",
  "@typescript-eslint/no-non-null-assertion: error",
  "@typescript-eslint/no-redundant-type-constituents: error",
  "@typescript-eslint/no-require-imports: error",
  "@typescript-eslint/no-restricted-imports: error",
  "@typescript-eslint/no-shadow: error",
  "@typescript-eslint/no-this-alias: error",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare: error",
  "@typescript-eslint/no-unnecessary-condition: error",
  "@typescript-eslint/no-unnecessary-qualifier: warn",
  "@typescript-eslint/no-unnecessary-template-expression: error",
  "@typescript-eslint/no-unnecessary-type-arguments: error",
  "@typescript-eslint/no-unnecessary-type-constraint: error",
  "@typescript-eslint/no-unnecessary-type-conversion: warn",
  "@typescript-eslint/no-unsafe-argument: error",
  "@typescript-eslint/no-unsafe-assignment: error",
  "@typescript-eslint/no-unsafe-call: error",
  "@typescript-eslint/no-unsafe-declaration-merging: error",
  "@typescript-eslint/no-unsafe-enum-comparison: error",
  "@typescript-eslint/no-unsafe-function-type: error",
  "@typescript-eslint/no-unsafe-member-access: error",
  "@typescript-eslint/no-unsafe-return: error",
  "@typescript-eslint/no-unsafe-unary-minus: error",
  "@typescript-eslint/no-unused-expressions: error",
  "@typescript-eslint/no-unused-vars: error",
  "@typescript-eslint/no-use-before-define: error",
  "@typescript-eslint/no-useless-constructor: error",
  "@typescript-eslint/no-useless-default-assignment: error",
  "@typescript-eslint/no-useless-empty-export: warn",
  "@typescript-eslint/no-wrapper-object-types: error",
  "@typescript-eslint/non-nullable-type-assertion-style: error",
  "@typescript-eslint/only-throw-error: error",
  "@typescript-eslint/parameter-properties: error",
  "@typescript-eslint/prefer-as-const: error",
  "@typescript-eslint/prefer-find: error",
  "@typescript-eslint/prefer-for-of: error",
  "@typescript-eslint/prefer-function-type: error",
  "@typescript-eslint/prefer-includes: error",
  "@typescript-eslint/prefer-literal-enum-member: error",
  "@typescript-eslint/prefer-namespace-keyword: error",
  "@typescript-eslint/prefer-nullish-coalescing: error",
  "@typescript-eslint/prefer-promise-reject-errors: error",
  "@typescript-eslint/prefer-readonly: warn",
  "@typescript-eslint/prefer-reduce-type-parameter: error",
  "@typescript-eslint/prefer-regexp-exec: error",
  "@typescript-eslint/prefer-return-this-type: error",
  "@typescript-eslint/prefer-string-starts-ends-with: error",
  "@typescript-eslint/promise-function-async: error",
  "@typescript-eslint/related-getter-setter-pairs: error",
  "@typescript-eslint/require-array-sort-compare: error",
  "@typescript-eslint/require-await: error",
  "@typescript-eslint/restrict-plus-operands: error",
  "@typescript-eslint/restrict-template-expressions: error",
  "@typescript-eslint/return-await: error",
  "@typescript-eslint/strict-boolean-expressions: error",
  "@typescript-eslint/switch-exhaustiveness-check: error",
  "@typescript-eslint/triple-slash-reference: error",
  "@typescript-eslint/unbound-method: error",
  "@typescript-eslint/unified-signatures: error",
  "@typescript-eslint/use-unknown-in-catch-callback-variable: error",
  "eqeqeq: warn",
  "for-direction: error",
  "import-x/consistent-type-specifier-style: warn",
  "import-x/default: error",
  "import-x/export: error",
  "import-x/extensions: error",
  "import-x/first: warn",
  "import-x/namespace: error",
  "import-x/newline-after-import: warn",
  "import-x/no-absolute-path: warn",
  "import-x/no-amd: error",
  "import-x/no-anonymous-default-export: error",
  "import-x/no-commonjs: error",
  "import-x/no-cycle: error",
  "import-x/no-deprecated: error",
  "import-x/no-duplicates: warn",
  "import-x/no-empty-named-blocks: warn",
  "import-x/no-extraneous-dependencies: error",
  "import-x/no-import-module-exports: warn",
  "import-x/no-mutable-exports: error",
  "import-x/no-named-as-default-member: warn",
  "import-x/no-named-as-default: warn",
  "import-x/no-namespace: warn",
  "import-x/no-relative-packages: warn",
  "import-x/no-self-import: error",
  "import-x/no-unassigned-import: error",
  "import-x/no-unresolved: error",
  "import-x/no-useless-path-segments: warn",
  "import-x/no-webpack-loader-syntax: error",
  "import-x/order: warn",
  "import-x/unambiguous: error",
  "no-async-promise-executor: error",
  "no-case-declarations: error",
  "no-compare-neg-zero: error",
  "no-cond-assign: error",
  "no-constant-binary-expression: error",
  "no-constant-condition: error",
  "no-control-regex: error",
  "no-debugger: error",
  "no-delete-var: error",
  "no-dupe-else-if: error",
  "no-duplicate-case: error",
  "no-empty-character-class: error",
  "no-empty-pattern: error",
  "no-empty-static-block: error",
  "no-empty: error",
  "no-ex-assign: error",
  "no-extra-boolean-cast: error",
  "no-fallthrough: error",
  "no-global-assign: error",
  "no-invalid-regexp: error",
  "no-irregular-whitespace: error",
  "no-loss-of-precision: error",
  "no-misleading-character-class: error",
  "no-nonoctal-decimal-escape: error",
  "no-octal: error",
  "no-prototype-builtins: error",
  "no-regex-spaces: error",
  "no-self-assign: error",
  "no-shadow-restricted-names: error",
  "no-sparse-arrays: error",
  "no-unassigned-vars: error",
  "no-unsafe-finally: error",
  "no-unsafe-optional-chaining: error",
  "no-unused-labels: error",
  "no-unused-private-class-members: error",
  "no-useless-assignment: error",
  "no-useless-backreference: error",
  "no-useless-catch: error",
  "no-useless-escape: error",
  "no-var: error",
  "prefer-const: error",
  "prefer-rest-params: error",
  "prefer-spread: error",
  "preserve-caught-error: error",
  "require-yield: error",
  "unicorn/better-dom-traversing: error",
  "unicorn/catch-error-name: error",
  "unicorn/consistent-assert: error",
  "unicorn/consistent-compound-words: error",
  "unicorn/consistent-conditional-object-spread: error",
  "unicorn/consistent-date-clone: error",
  "unicorn/consistent-empty-array-spread: error",
  "unicorn/consistent-existence-index-check: error",
  "unicorn/consistent-export-decorator-position: error",
  "unicorn/consistent-function-scoping: error",
  "unicorn/consistent-json-file-read: error",
  "unicorn/consistent-optional-chaining: error",
  "unicorn/consistent-template-literal-escape: error",
  "unicorn/consistent-tuple-labels: error",
  "unicorn/default-export-style: error",
  "unicorn/dom-node-dataset: error",
  "unicorn/error-message: error",
  "unicorn/escape-case: error",
  "unicorn/expiring-todo-comments: error",
  "unicorn/explicit-length-check: error",
  "unicorn/explicit-timer-delay: error",
  "unicorn/import-style: error",
  "unicorn/isolated-functions: error",
  "unicorn/logical-assignment-operators: error",
  "unicorn/new-for-builtins: error",
  "unicorn/no-abusive-eslint-disable: error",
  "unicorn/no-accessor-recursion: error",
  "unicorn/no-accidental-bitwise-operator: error",
  "unicorn/no-anonymous-default-export: error",
  "unicorn/no-array-callback-reference: error",
  "unicorn/no-array-concat-in-loop: error",
  "unicorn/no-array-fill-with-reference-type: error",
  "unicorn/no-array-from-fill: error",
  "unicorn/no-array-method-this-argument: error",
  "unicorn/no-array-reduce: error",
  "unicorn/no-array-reverse: error",
  "unicorn/no-array-sort-for-min-max: error",
  "unicorn/no-array-sort: error",
  "unicorn/no-array-splice: error",
  "unicorn/no-async-promise-finally: error",
  "unicorn/no-await-expression-member: error",
  "unicorn/no-await-in-promise-methods: error",
  "unicorn/no-blob-to-file: error",
  "unicorn/no-boolean-sort-comparator: error",
  "unicorn/no-canvas-to-image: error",
  "unicorn/no-chained-comparison: error",
  "unicorn/no-collection-bracket-access: error",
  "unicorn/no-computed-property-existence-check: error",
  "unicorn/no-confusing-array-splice: error",
  "unicorn/no-confusing-array-with: error",
  "unicorn/no-console-spaces: error",
  "unicorn/no-constant-zero-expression: error",
  "unicorn/no-declarations-before-early-exit: error",
  "unicorn/no-document-cookie: error",
  "unicorn/no-double-comparison: error",
  "unicorn/no-duplicate-if-branches: error",
  "unicorn/no-duplicate-logical-operands: error",
  "unicorn/no-duplicate-loops: error",
  "unicorn/no-duplicate-set-values: error",
  "unicorn/no-empty-file: error",
  "unicorn/no-error-property-assignment: error",
  "unicorn/no-exports-in-scripts: error",
  "unicorn/no-for-each: error",
  "unicorn/no-for-loop: error",
  "unicorn/no-global-object-property-assignment: error",
  "unicorn/no-immediate-mutation: error",
  "unicorn/no-impossible-length-comparison: error",
  "unicorn/no-incorrect-query-selector: error",
  "unicorn/no-incorrect-template-string-interpolation: error",
  "unicorn/no-instanceof-builtins: error",
  "unicorn/no-invalid-argument-count: error",
  "unicorn/no-invalid-character-comparison: error",
  "unicorn/no-invalid-fetch-options: error",
  "unicorn/no-invalid-remove-event-listener: error",
  "unicorn/no-invalid-well-known-symbol-methods: error",
  "unicorn/no-late-current-target-access: error",
  "unicorn/no-late-event-control: error",
  "unicorn/no-lonely-if: error",
  "unicorn/no-loop-iterable-mutation: error",
  "unicorn/no-magic-array-flat-depth: error",
  "unicorn/no-mismatched-map-key: error",
  "unicorn/no-misrefactored-assignment: error",
  "unicorn/no-multiple-promise-resolver-calls: error",
  "unicorn/no-named-default: error",
  "unicorn/no-negated-array-predicate: error",
  "unicorn/no-negated-comparison: error",
  "unicorn/no-negation-in-equality-check: error",
  "unicorn/no-new-array: error",
  "unicorn/no-new-buffer: error",
  "unicorn/no-object-as-default-parameter: error",
  "unicorn/no-object-methods-with-collections: error",
  "unicorn/no-optional-chaining-on-undeclared-variable: error",
  "unicorn/no-process-exit: error",
  "unicorn/no-redundant-comparison: error",
  "unicorn/no-return-array-push: error",
  "unicorn/no-selector-as-dom-name: error",
  "unicorn/no-shorthand-property-overrides: error",
  "unicorn/no-single-promise-in-promise-methods: error",
  "unicorn/no-subtraction-comparison: error",
  "unicorn/no-thenable: error",
  "unicorn/no-this-assignment: error",
  "unicorn/no-this-outside-of-class: error",
  "unicorn/no-transition-all: error",
  "unicorn/no-uncalled-method: error",
  "unicorn/no-undeclared-class-members: error",
  "unicorn/no-unnecessary-array-flat-depth: error",
  "unicorn/no-unnecessary-array-flat-map: error",
  "unicorn/no-unnecessary-array-splice-count: error",
  "unicorn/no-unnecessary-await: error",
  "unicorn/no-unnecessary-boolean-comparison: error",
  "unicorn/no-unnecessary-fetch-options: error",
  "unicorn/no-unnecessary-global-this: error",
  "unicorn/no-unnecessary-nested-ternary: error",
  "unicorn/no-unnecessary-polyfills: error",
  "unicorn/no-unnecessary-slice-end: error",
  "unicorn/no-unnecessary-splice: error",
  "unicorn/no-unnecessary-string-trim: error",
  "unicorn/no-unreadable-array-destructuring: error",
  "unicorn/no-unreadable-for-of-expression: error",
  "unicorn/no-unreadable-iife: error",
  "unicorn/no-unreadable-object-destructuring: error",
  "unicorn/no-unsafe-buffer-conversion: error",
  "unicorn/no-unsafe-promise-all-settled-values: error",
  "unicorn/no-unsafe-property-key: error",
  "unicorn/no-unsafe-sqlite-interpolation: error",
  "unicorn/no-unsafe-string-replacement: warn",
  "unicorn/no-unused-array-method-return: error",
  "unicorn/no-useless-boolean-cast: error",
  "unicorn/no-useless-coercion: error",
  "unicorn/no-useless-collection-argument: error",
  "unicorn/no-useless-compound-assignment: error",
  "unicorn/no-useless-concat: error",
  "unicorn/no-useless-continue: error",
  "unicorn/no-useless-delete-check: error",
  "unicorn/no-useless-else: error",
  "unicorn/no-useless-error-capture-stack-trace: error",
  "unicorn/no-useless-fallback-in-spread: error",
  "unicorn/no-useless-iterator-to-array: error",
  "unicorn/no-useless-length-check: error",
  "unicorn/no-useless-logical-operand: error",
  "unicorn/no-useless-override: error",
  "unicorn/no-useless-promise-resolve-reject: error",
  "unicorn/no-useless-re-export: error",
  "unicorn/no-useless-recursion: error",
  "unicorn/no-useless-spread: error",
  "unicorn/no-useless-switch-case: error",
  "unicorn/no-useless-template-literals: error",
  "unicorn/no-useless-undefined: error",
  "unicorn/no-xor-as-exponentiation: error",
  "unicorn/no-zero-fractions: error",
  "unicorn/numeric-separators-style: error",
  "unicorn/operator-assignment: error",
  "unicorn/prefer-abort-signal-any: error",
  "unicorn/prefer-abort-signal-timeout: error",
  "unicorn/prefer-add-event-listener-options: error",
  "unicorn/prefer-add-event-listener: error",
  "unicorn/prefer-aggregate-error: error",
  "unicorn/prefer-array-find: error",
  "unicorn/prefer-array-flat-map: error",
  "unicorn/prefer-array-flat: error",
  "unicorn/prefer-array-from-async: error",
  "unicorn/prefer-array-from-map: error",
  "unicorn/prefer-array-from-range: error",
  "unicorn/prefer-array-index-of: error",
  "unicorn/prefer-array-iterable-methods: error",
  "unicorn/prefer-array-last-methods: error",
  "unicorn/prefer-array-slice: error",
  "unicorn/prefer-array-some: error",
  "unicorn/prefer-bigint-literals: error",
  "unicorn/prefer-blob-reading-methods: error",
  "unicorn/prefer-block-statement-over-iife: error",
  "unicorn/prefer-boolean-return: error",
  "unicorn/prefer-class-fields: error",
  "unicorn/prefer-classlist-toggle: error",
  "unicorn/prefer-code-point: error",
  "unicorn/prefer-continue: error",
  "unicorn/prefer-date-now: error",
  "unicorn/prefer-default-parameters: error",
  "unicorn/prefer-direct-iteration: error",
  "unicorn/prefer-dom-node-append: error",
  "unicorn/prefer-dom-node-remove: error",
  "unicorn/prefer-dom-node-replace-children: error",
  "unicorn/prefer-dom-node-text-content: error",
  "unicorn/prefer-early-return: error",
  "unicorn/prefer-else-if: error",
  "unicorn/prefer-event-target: error",
  "unicorn/prefer-export-from: error",
  "unicorn/prefer-flat-math-min-max: error",
  "unicorn/prefer-get-or-insert-computed: error",
  "unicorn/prefer-global-number-constants: error",
  "unicorn/prefer-global-this: error",
  "unicorn/prefer-group-by: error",
  "unicorn/prefer-has-check: error",
  "unicorn/prefer-hoisting-branch-code: error",
  "unicorn/prefer-identifier-import-export-specifiers: error",
  "unicorn/prefer-includes-over-repeated-comparisons: error",
  "unicorn/prefer-includes: error",
  "unicorn/prefer-iterable-in-constructor: error",
  "unicorn/prefer-iterator-helpers: error",
  "unicorn/prefer-iterator-to-array-at-end: error",
  "unicorn/prefer-keyboard-event-key: error",
  "unicorn/prefer-location-assign: error",
  "unicorn/prefer-logical-operator-over-ternary: error",
  "unicorn/prefer-map-from-entries: error",
  "unicorn/prefer-math-abs: error",
  "unicorn/prefer-math-constants: error",
  "unicorn/prefer-math-min-max: error",
  "unicorn/prefer-math-trunc: error",
  "unicorn/prefer-modern-dom-apis: error",
  "unicorn/prefer-modern-math-apis: error",
  "unicorn/prefer-module: error",
  "unicorn/prefer-native-coercion-functions: error",
  "unicorn/prefer-negative-index: error",
  "unicorn/prefer-node-protocol: error",
  "unicorn/prefer-number-coercion: error",
  "unicorn/prefer-number-is-safe-integer: error",
  "unicorn/prefer-number-properties: error",
  "unicorn/prefer-object-define-properties: error",
  "unicorn/prefer-object-destructuring-defaults: error",
  "unicorn/prefer-object-from-entries: error",
  "unicorn/prefer-object-iterable-methods: error",
  "unicorn/prefer-observer-apis: error",
  "unicorn/prefer-optional-catch-binding: error",
  "unicorn/prefer-path2d: error",
  "unicorn/prefer-private-class-fields: error",
  "unicorn/prefer-promise-with-resolvers: error",
  "unicorn/prefer-prototype-methods: error",
  "unicorn/prefer-query-selector: error",
  "unicorn/prefer-queue-microtask: error",
  "unicorn/prefer-reflect-apply: error",
  "unicorn/prefer-regexp-test: error",
  "unicorn/prefer-response-static-json: error",
  "unicorn/prefer-scoped-selector: error",
  "unicorn/prefer-set-has: error",
  "unicorn/prefer-set-methods: error",
  "unicorn/prefer-set-size: error",
  "unicorn/prefer-simple-condition-first: error",
  "unicorn/prefer-simple-sort-comparator: error",
  "unicorn/prefer-simplified-conditions: error",
  "unicorn/prefer-single-array-predicate: error",
  "unicorn/prefer-single-call: error",
  "unicorn/prefer-single-object-destructuring: error",
  "unicorn/prefer-single-replace: error",
  "unicorn/prefer-smaller-scope: error",
  "unicorn/prefer-string-match-all: error",
  "unicorn/prefer-string-pad-start-end: error",
  "unicorn/prefer-string-raw: error",
  "unicorn/prefer-string-repeat: error",
  "unicorn/prefer-string-replace-all: error",
  "unicorn/prefer-string-slice: error",
  "unicorn/prefer-string-starts-ends-with: error",
  "unicorn/prefer-string-trim-start-end: error",
  "unicorn/prefer-structured-clone: error",
  "unicorn/prefer-switch: error",
  "unicorn/prefer-ternary: warn",
  "unicorn/prefer-toggle-attribute: error",
  "unicorn/prefer-top-level-await: error",
  "unicorn/prefer-type-error: error",
  "unicorn/prefer-type-literal-last: error",
  "unicorn/prefer-uint8array-base64: error",
  "unicorn/prefer-unary-minus: error",
  "unicorn/prefer-unicode-code-point-escapes: error",
  "unicorn/prefer-url-can-parse: error",
  "unicorn/prefer-url-href: error",
  "unicorn/prefer-url-search-parameters: error",
  "unicorn/prefer-while-loop-condition: error",
  "unicorn/relative-url-style: error",
  "unicorn/require-array-join-separator: error",
  "unicorn/require-array-sort-compare: error",
  "unicorn/require-css-escape: error",
  "unicorn/require-module-attributes: error",
  "unicorn/require-module-specifiers: error",
  "unicorn/require-number-to-fixed-digits-argument: error",
  "unicorn/require-passive-events: error",
  "unicorn/require-proxy-trap-boolean-return: error",
  "unicorn/switch-case-break-position: error",
  "unicorn/text-encoding-identifier-case: error",
  "unicorn/throw-new-error: error",
  "unused-imports/no-unused-imports: error",
  "use-isnan: error",
  "valid-typeof: error",
]
`;

exports[`effective rule set react / stylistic 1`] = `
[
  "@eslint-react/dom-no-dangerously-set-innerhtml-with-children: error",
  "@eslint-react/dom-no-dangerously-set-innerhtml: error",
  "@eslint-react/dom-no-find-dom-node: error",
  "@eslint-react/dom-no-missing-button-type: error",
  "@eslint-react/dom-no-missing-iframe-sandbox: error",
  "@eslint-react/dom-no-render-return-value: error",
  "@eslint-react/dom-no-script-url: error",
  "@eslint-react/dom-no-string-style-prop: error",
  "@eslint-react/dom-no-unknown-property: warn",
  "@eslint-react/dom-no-unsafe-target-blank: warn",
  "@eslint-react/dom-no-void-elements-with-children: error",
  "@eslint-react/jsx-no-children-prop: error",
  "@eslint-react/jsx-no-comment-textnodes: error",
  "@eslint-react/jsx-no-namespace: error",
  "@eslint-react/jsx-no-useless-fragment: warn",
  "@eslint-react/kit/jsx-boolean-value: error",
  "@eslint-react/kit/jsx-fragments: error",
  "@eslint-react/kit/jsx-no-duplicate-props: error",
  "@eslint-react/no-access-state-in-setstate: error",
  "@eslint-react/no-array-index-key: error",
  "@eslint-react/no-duplicate-key: warn",
  "@eslint-react/no-leaked-conditional-rendering: warn",
  "@eslint-react/no-missing-component-display-name: error",
  "@eslint-react/no-missing-key: error",
  "@eslint-react/no-nested-component-definitions: error",
  "@eslint-react/no-set-state-in-component-will-update: error",
  "@eslint-react/no-unstable-context-value: error",
  "@eslint-react/no-unstable-default-props: error",
  "@eslint-react/no-unused-props: error",
  "@eslint-react/no-unused-state: error",
  "@eslint-react/use-state: error",
  "@stylistic/array-bracket-newline: warn",
  "@stylistic/array-bracket-spacing: warn",
  "@stylistic/array-element-newline: warn",
  "@stylistic/arrow-parens: warn",
  "@stylistic/arrow-spacing: warn",
  "@stylistic/block-spacing: warn",
  "@stylistic/brace-style: warn",
  "@stylistic/comma-dangle: warn",
  "@stylistic/comma-spacing: warn",
  "@stylistic/comma-style: warn",
  "@stylistic/computed-property-spacing: warn",
  "@stylistic/curly-newline: warn",
  "@stylistic/dot-location: warn",
  "@stylistic/eol-last: warn",
  "@stylistic/function-call-argument-newline: warn",
  "@stylistic/function-call-spacing: warn",
  "@stylistic/function-paren-newline: warn",
  "@stylistic/generator-star-spacing: warn",
  "@stylistic/implicit-arrow-linebreak: warn",
  "@stylistic/indent-binary-ops: warn",
  "@stylistic/indent: warn",
  "@stylistic/jsx-child-element-spacing: error",
  "@stylistic/jsx-closing-bracket-location: warn",
  "@stylistic/jsx-closing-tag-location: warn",
  "@stylistic/jsx-curly-brace-presence: warn",
  "@stylistic/jsx-curly-newline: warn",
  "@stylistic/jsx-curly-spacing: warn",
  "@stylistic/jsx-equals-spacing: warn",
  "@stylistic/jsx-first-prop-new-line: warn",
  "@stylistic/jsx-function-call-newline: warn",
  "@stylistic/jsx-indent-props: warn",
  "@stylistic/jsx-max-props-per-line: error",
  "@stylistic/jsx-one-expression-per-line: warn",
  "@stylistic/jsx-pascal-case: error",
  "@stylistic/jsx-quotes: warn",
  "@stylistic/jsx-self-closing-comp: warn",
  "@stylistic/jsx-sort-props: warn",
  "@stylistic/jsx-tag-spacing: warn",
  "@stylistic/jsx-wrap-multilines: warn",
  "@stylistic/key-spacing: warn",
  "@stylistic/keyword-spacing: warn",
  "@stylistic/line-comment-position: warn",
  "@stylistic/linebreak-style: warn",
  "@stylistic/lines-around-comment: warn",
  "@stylistic/lines-between-class-members: warn",
  "@stylistic/max-len: error",
  "@stylistic/max-statements-per-line: error",
  "@stylistic/member-delimiter-style: warn",
  "@stylistic/multiline-ternary: warn",
  "@stylistic/new-parens: warn",
  "@stylistic/newline-per-chained-call: warn",
  "@stylistic/no-confusing-arrow: warn",
  "@stylistic/no-extra-parens: warn",
  "@stylistic/no-extra-semi: warn",
  "@stylistic/no-floating-decimal: warn",
  "@stylistic/no-mixed-operators: error",
  "@stylistic/no-mixed-spaces-and-tabs: error",
  "@stylistic/no-multi-spaces: warn",
  "@stylistic/no-multiple-empty-lines: warn",
  "@stylistic/no-tabs: error",
  "@stylistic/no-trailing-spaces: warn",
  "@stylistic/no-whitespace-before-property: warn",
  "@stylistic/nonblock-statement-body-position: warn",
  "@stylistic/object-curly-newline: warn",
  "@stylistic/object-curly-spacing: warn",
  "@stylistic/object-property-newline: warn",
  "@stylistic/one-var-declaration-per-line: warn",
  "@stylistic/operator-linebreak: warn",
  "@stylistic/padded-blocks: warn",
  "@stylistic/padding-line-between-statements: warn",
  "@stylistic/quote-props: warn",
  "@stylistic/quotes: warn",
  "@stylistic/rest-spread-spacing: warn",
  "@stylistic/semi-spacing: warn",
  "@stylistic/semi-style: warn",
  "@stylistic/semi: warn",
  "@stylistic/space-before-blocks: warn",
  "@stylistic/space-before-function-paren: warn",
  "@stylistic/space-in-parens: warn",
  "@stylistic/space-infix-ops: warn",
  "@stylistic/space-unary-ops: warn",
  "@stylistic/spaced-comment: warn",
  "@stylistic/switch-colon-spacing: warn",
  "@stylistic/template-curly-spacing: warn",
  "@stylistic/template-tag-spacing: warn",
  "@stylistic/type-annotation-spacing: warn",
  "@stylistic/type-generic-spacing: warn",
  "@stylistic/type-named-tuple-spacing: warn",
  "@stylistic/wrap-iife: warn",
  "@stylistic/wrap-regex: warn",
  "@stylistic/yield-star-spacing: warn",
  "@typescript-eslint/adjacent-overload-signatures: error",
  "@typescript-eslint/array-type: error",
  "@typescript-eslint/await-thenable: error",
  "@typescript-eslint/ban-ts-comment: error",
  "@typescript-eslint/ban-tslint-comment: error",
  "@typescript-eslint/class-literal-property-style: error",
  "@typescript-eslint/class-methods-use-this: error",
  "@typescript-eslint/consistent-generic-constructors: error",
  "@typescript-eslint/consistent-indexed-object-style: error",
  "@typescript-eslint/consistent-type-assertions: error",
  "@typescript-eslint/consistent-type-definitions: error",
  "@typescript-eslint/consistent-type-exports: error",
  "@typescript-eslint/consistent-type-imports: error",
  "@typescript-eslint/default-param-last: error",
  "@typescript-eslint/dot-notation: error",
  "@typescript-eslint/explicit-function-return-type: error",
  "@typescript-eslint/explicit-member-accessibility: error",
  "@typescript-eslint/explicit-module-boundary-types: error",
  "@typescript-eslint/member-ordering: error",
  "@typescript-eslint/method-signature-style: error",
  "@typescript-eslint/naming-convention: error",
  "@typescript-eslint/no-array-constructor: error",
  "@typescript-eslint/no-array-delete: error",
  "@typescript-eslint/no-base-to-string: error",
  "@typescript-eslint/no-confusing-non-null-assertion: error",
  "@typescript-eslint/no-confusing-void-expression: error",
  "@typescript-eslint/no-deprecated: error",
  "@typescript-eslint/no-duplicate-enum-values: error",
  "@typescript-eslint/no-duplicate-type-constituents: error",
  "@typescript-eslint/no-dynamic-delete: error",
  "@typescript-eslint/no-empty-function: error",
  "@typescript-eslint/no-empty-object-type: error",
  "@typescript-eslint/no-explicit-any: error",
  "@typescript-eslint/no-extra-non-null-assertion: error",
  "@typescript-eslint/no-extraneous-class: error",
  "@typescript-eslint/no-floating-promises: error",
  "@typescript-eslint/no-for-in-array: error",
  "@typescript-eslint/no-implied-eval: error",
  "@typescript-eslint/no-import-type-side-effects: error",
  "@typescript-eslint/no-inferrable-types: error",
  "@typescript-eslint/no-invalid-this: error",
  "@typescript-eslint/no-invalid-void-type: error",
  "@typescript-eslint/no-loop-func: error",
  "@typescript-eslint/no-meaningless-void-operator: error",
  "@typescript-eslint/no-misused-new: error",
  "@typescript-eslint/no-misused-promises: error",
  "@typescript-eslint/no-misused-spread: error",
  "@typescript-eslint/no-mixed-enums: error",
  "@typescript-eslint/no-namespace: error",
  "@typescript-eslint/no-non-null-asserted-nullish-coalescing: error",
  "@typescript-eslint/no-non-null-asserted-optional-chain: error",
  "@typescript-eslint/no-non-null-assertion: error",
  "@typescript-eslint/no-redundant-type-constituents: error",
  "@typescript-eslint/no-require-imports: error",
  "@typescript-eslint/no-restricted-imports: error",
  "@typescript-eslint/no-shadow: error",
  "@typescript-eslint/no-this-alias: error",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare: error",
  "@typescript-eslint/no-unnecessary-condition: error",
  "@typescript-eslint/no-unnecessary-qualifier: warn",
  "@typescript-eslint/no-unnecessary-template-expression: error",
  "@typescript-eslint/no-unnecessary-type-arguments: error",
  "@typescript-eslint/no-unnecessary-type-constraint: error",
  "@typescript-eslint/no-unnecessary-type-conversion: warn",
  "@typescript-eslint/no-unsafe-argument: error",
  "@typescript-eslint/no-unsafe-assignment: error",
  "@typescript-eslint/no-unsafe-call: error",
  "@typescript-eslint/no-unsafe-declaration-merging: error",
  "@typescript-eslint/no-unsafe-enum-comparison: error",
  "@typescript-eslint/no-unsafe-function-type: error",
  "@typescript-eslint/no-unsafe-member-access: error",
  "@typescript-eslint/no-unsafe-return: error",
  "@typescript-eslint/no-unsafe-unary-minus: error",
  "@typescript-eslint/no-unused-expressions: error",
  "@typescript-eslint/no-unused-vars: error",
  "@typescript-eslint/no-use-before-define: error",
  "@typescript-eslint/no-useless-constructor: error",
  "@typescript-eslint/no-useless-default-assignment: error",
  "@typescript-eslint/no-useless-empty-export: warn",
  "@typescript-eslint/no-wrapper-object-types: error",
  "@typescript-eslint/non-nullable-type-assertion-style: error",
  "@typescript-eslint/only-throw-error: error",
  "@typescript-eslint/parameter-properties: error",
  "@typescript-eslint/prefer-as-const: error",
  "@typescript-eslint/prefer-find: error",
  "@typescript-eslint/prefer-for-of: error",
  "@typescript-eslint/prefer-function-type: error",
  "@typescript-eslint/prefer-includes: error",
  "@typescript-eslint/prefer-literal-enum-member: error",
  "@typescript-eslint/prefer-namespace-keyword: error",
  "@typescript-eslint/prefer-nullish-coalescing: error",
  "@typescript-eslint/prefer-promise-reject-errors: error",
  "@typescript-eslint/prefer-readonly: warn",
  "@typescript-eslint/prefer-reduce-type-parameter: error",
  "@typescript-eslint/prefer-regexp-exec: error",
  "@typescript-eslint/prefer-return-this-type: error",
  "@typescript-eslint/prefer-string-starts-ends-with: error",
  "@typescript-eslint/promise-function-async: error",
  "@typescript-eslint/related-getter-setter-pairs: error",
  "@typescript-eslint/require-array-sort-compare: error",
  "@typescript-eslint/require-await: error",
  "@typescript-eslint/restrict-plus-operands: error",
  "@typescript-eslint/restrict-template-expressions: error",
  "@typescript-eslint/return-await: error",
  "@typescript-eslint/strict-boolean-expressions: error",
  "@typescript-eslint/switch-exhaustiveness-check: error",
  "@typescript-eslint/triple-slash-reference: error",
  "@typescript-eslint/unbound-method: error",
  "@typescript-eslint/unified-signatures: error",
  "@typescript-eslint/use-unknown-in-catch-callback-variable: error",
  "curly: warn",
  "eqeqeq: warn",
  "for-direction: error",
  "import-x/consistent-type-specifier-style: warn",
  "import-x/default: error",
  "import-x/export: error",
  "import-x/extensions: error",
  "import-x/first: warn",
  "import-x/namespace: error",
  "import-x/newline-after-import: warn",
  "import-x/no-absolute-path: warn",
  "import-x/no-amd: error",
  "import-x/no-anonymous-default-export: error",
  "import-x/no-commonjs: error",
  "import-x/no-cycle: error",
  "import-x/no-deprecated: error",
  "import-x/no-duplicates: warn",
  "import-x/no-empty-named-blocks: warn",
  "import-x/no-extraneous-dependencies: error",
  "import-x/no-import-module-exports: warn",
  "import-x/no-mutable-exports: error",
  "import-x/no-named-as-default-member: warn",
  "import-x/no-named-as-default: warn",
  "import-x/no-namespace: warn",
  "import-x/no-relative-packages: warn",
  "import-x/no-self-import: error",
  "import-x/no-unassigned-import: error",
  "import-x/no-unresolved: error",
  "import-x/no-useless-path-segments: warn",
  "import-x/no-webpack-loader-syntax: error",
  "import-x/order: warn",
  "import-x/unambiguous: error",
  "no-async-promise-executor: error",
  "no-case-declarations: error",
  "no-compare-neg-zero: error",
  "no-cond-assign: error",
  "no-constant-binary-expression: error",
  "no-constant-condition: error",
  "no-control-regex: error",
  "no-debugger: error",
  "no-delete-var: error",
  "no-dupe-else-if: error",
  "no-duplicate-case: error",
  "no-empty-character-class: error",
  "no-empty-pattern: error",
  "no-empty-static-block: error",
  "no-empty: error",
  "no-ex-assign: error",
  "no-extra-boolean-cast: error",
  "no-fallthrough: error",
  "no-global-assign: error",
  "no-invalid-regexp: error",
  "no-irregular-whitespace: error",
  "no-loss-of-precision: error",
  "no-misleading-character-class: error",
  "no-nonoctal-decimal-escape: error",
  "no-octal: error",
  "no-prototype-builtins: error",
  "no-regex-spaces: error",
  "no-self-assign: error",
  "no-shadow-restricted-names: error",
  "no-sparse-arrays: error",
  "no-unassigned-vars: error",
  "no-unexpected-multiline: error",
  "no-unsafe-finally: error",
  "no-unsafe-optional-chaining: error",
  "no-unused-labels: error",
  "no-unused-private-class-members: error",
  "no-useless-assignment: error",
  "no-useless-backreference: error",
  "no-useless-catch: error",
  "no-useless-escape: error",
  "no-var: error",
  "prefer-const: error",
  "prefer-rest-params: error",
  "prefer-spread: error",
  "preserve-caught-error: error",
  "react-hooks/config: error",
  "react-hooks/error-boundaries: error",
  "react-hooks/exhaustive-deps: warn",
  "react-hooks/gating: error",
  "react-hooks/globals: error",
  "react-hooks/immutability: error",
  "react-hooks/incompatible-library: warn",
  "react-hooks/preserve-manual-memoization: error",
  "react-hooks/purity: error",
  "react-hooks/refs: error",
  "react-hooks/rules-of-hooks: error",
  "react-hooks/set-state-in-effect: error",
  "react-hooks/set-state-in-render: error",
  "react-hooks/static-components: error",
  "react-hooks/unsupported-syntax: warn",
  "react-hooks/use-memo: error",
  "react-hooks/void-use-memo: error",
  "react-refresh/only-export-components: error",
  "require-yield: error",
  "unicorn/better-dom-traversing: error",
  "unicorn/catch-error-name: error",
  "unicorn/consistent-assert: error",
  "unicorn/consistent-compound-words: error",
  "unicorn/consistent-conditional-object-spread: error",
  "unicorn/consistent-date-clone: error",
  "unicorn/consistent-empty-array-spread: error",
  "unicorn/consistent-existence-index-check: error",
  "unicorn/consistent-export-decorator-position: error",
  "unicorn/consistent-function-scoping: error",
  "unicorn/consistent-json-file-read: error",
  "unicorn/consistent-optional-chaining: error",
  "unicorn/consistent-template-literal-escape: error",
  "unicorn/consistent-tuple-labels: error",
  "unicorn/default-export-style: error",
  "unicorn/dom-node-dataset: error",
  "unicorn/empty-brace-spaces: error",
  "unicorn/error-message: error",
  "unicorn/escape-case: error",
  "unicorn/expiring-todo-comments: error",
  "unicorn/explicit-length-check: error",
  "unicorn/explicit-timer-delay: error",
  "unicorn/import-style: error",
  "unicorn/isolated-functions: error",
  "unicorn/logical-assignment-operators: error",
  "unicorn/new-for-builtins: error",
  "unicorn/no-abusive-eslint-disable: error",
  "unicorn/no-accessor-recursion: error",
  "unicorn/no-accidental-bitwise-operator: error",
  "unicorn/no-anonymous-default-export: error",
  "unicorn/no-array-callback-reference: error",
  "unicorn/no-array-concat-in-loop: error",
  "unicorn/no-array-fill-with-reference-type: error",
  "unicorn/no-array-from-fill: error",
  "unicorn/no-array-method-this-argument: error",
  "unicorn/no-array-reduce: error",
  "unicorn/no-array-reverse: error",
  "unicorn/no-array-sort-for-min-max: error",
  "unicorn/no-array-sort: error",
  "unicorn/no-array-splice: error",
  "unicorn/no-async-promise-finally: error",
  "unicorn/no-await-expression-member: error",
  "unicorn/no-await-in-promise-methods: error",
  "unicorn/no-blob-to-file: error",
  "unicorn/no-boolean-sort-comparator: error",
  "unicorn/no-canvas-to-image: error",
  "unicorn/no-chained-comparison: error",
  "unicorn/no-collection-bracket-access: error",
  "unicorn/no-computed-property-existence-check: error",
  "unicorn/no-confusing-array-splice: error",
  "unicorn/no-confusing-array-with: error",
  "unicorn/no-console-spaces: error",
  "unicorn/no-constant-zero-expression: error",
  "unicorn/no-declarations-before-early-exit: error",
  "unicorn/no-document-cookie: error",
  "unicorn/no-double-comparison: error",
  "unicorn/no-duplicate-if-branches: error",
  "unicorn/no-duplicate-logical-operands: error",
  "unicorn/no-duplicate-loops: error",
  "unicorn/no-duplicate-set-values: error",
  "unicorn/no-empty-file: error",
  "unicorn/no-error-property-assignment: error",
  "unicorn/no-exports-in-scripts: error",
  "unicorn/no-for-each: error",
  "unicorn/no-for-loop: error",
  "unicorn/no-global-object-property-assignment: error",
  "unicorn/no-immediate-mutation: error",
  "unicorn/no-impossible-length-comparison: error",
  "unicorn/no-incorrect-query-selector: error",
  "unicorn/no-incorrect-template-string-interpolation: error",
  "unicorn/no-instanceof-builtins: error",
  "unicorn/no-invalid-argument-count: error",
  "unicorn/no-invalid-character-comparison: error",
  "unicorn/no-invalid-fetch-options: error",
  "unicorn/no-invalid-remove-event-listener: error",
  "unicorn/no-invalid-well-known-symbol-methods: error",
  "unicorn/no-late-current-target-access: error",
  "unicorn/no-late-event-control: error",
  "unicorn/no-lonely-if: error",
  "unicorn/no-loop-iterable-mutation: error",
  "unicorn/no-magic-array-flat-depth: error",
  "unicorn/no-mismatched-map-key: error",
  "unicorn/no-misrefactored-assignment: error",
  "unicorn/no-multiple-promise-resolver-calls: error",
  "unicorn/no-named-default: error",
  "unicorn/no-negated-array-predicate: error",
  "unicorn/no-negated-comparison: error",
  "unicorn/no-negation-in-equality-check: error",
  "unicorn/no-nested-ternary: error",
  "unicorn/no-new-array: error",
  "unicorn/no-new-buffer: error",
  "unicorn/no-object-as-default-parameter: error",
  "unicorn/no-object-methods-with-collections: error",
  "unicorn/no-optional-chaining-on-undeclared-variable: error",
  "unicorn/no-process-exit: error",
  "unicorn/no-redundant-comparison: error",
  "unicorn/no-return-array-push: error",
  "unicorn/no-selector-as-dom-name: error",
  "unicorn/no-shorthand-property-overrides: error",
  "unicorn/no-single-promise-in-promise-methods: error",
  "unicorn/no-subtraction-comparison: error",
  "unicorn/no-thenable: error",
  "unicorn/no-this-assignment: error",
  "unicorn/no-this-outside-of-class: error",
  "unicorn/no-transition-all: error",
  "unicorn/no-uncalled-method: error",
  "unicorn/no-undeclared-class-members: error",
  "unicorn/no-unnecessary-array-flat-depth: error",
  "unicorn/no-unnecessary-array-flat-map: error",
  "unicorn/no-unnecessary-array-splice-count: error",
  "unicorn/no-unnecessary-await: error",
  "unicorn/no-unnecessary-boolean-comparison: error",
  "unicorn/no-unnecessary-fetch-options: error",
  "unicorn/no-unnecessary-global-this: error",
  "unicorn/no-unnecessary-nested-ternary: error",
  "unicorn/no-unnecessary-polyfills: error",
  "unicorn/no-unnecessary-slice-end: error",
  "unicorn/no-unnecessary-splice: error",
  "unicorn/no-unnecessary-string-trim: error",
  "unicorn/no-unreadable-array-destructuring: error",
  "unicorn/no-unreadable-for-of-expression: error",
  "unicorn/no-unreadable-iife: error",
  "unicorn/no-unreadable-object-destructuring: error",
  "unicorn/no-unsafe-buffer-conversion: error",
  "unicorn/no-unsafe-promise-all-settled-values: error",
  "unicorn/no-unsafe-property-key: error",
  "unicorn/no-unsafe-sqlite-interpolation: error",
  "unicorn/no-unsafe-string-replacement: warn",
  "unicorn/no-unused-array-method-return: error",
  "unicorn/no-useless-boolean-cast: error",
  "unicorn/no-useless-coercion: error",
  "unicorn/no-useless-collection-argument: error",
  "unicorn/no-useless-compound-assignment: error",
  "unicorn/no-useless-concat: error",
  "unicorn/no-useless-continue: error",
  "unicorn/no-useless-delete-check: error",
  "unicorn/no-useless-else: error",
  "unicorn/no-useless-error-capture-stack-trace: error",
  "unicorn/no-useless-fallback-in-spread: error",
  "unicorn/no-useless-iterator-to-array: error",
  "unicorn/no-useless-length-check: error",
  "unicorn/no-useless-logical-operand: error",
  "unicorn/no-useless-override: error",
  "unicorn/no-useless-promise-resolve-reject: error",
  "unicorn/no-useless-re-export: error",
  "unicorn/no-useless-recursion: error",
  "unicorn/no-useless-spread: error",
  "unicorn/no-useless-switch-case: error",
  "unicorn/no-useless-template-literals: error",
  "unicorn/no-useless-undefined: error",
  "unicorn/no-xor-as-exponentiation: error",
  "unicorn/no-zero-fractions: error",
  "unicorn/number-literal-case: error",
  "unicorn/numeric-separators-style: error",
  "unicorn/operator-assignment: error",
  "unicorn/prefer-abort-signal-any: error",
  "unicorn/prefer-abort-signal-timeout: error",
  "unicorn/prefer-add-event-listener-options: error",
  "unicorn/prefer-add-event-listener: error",
  "unicorn/prefer-aggregate-error: error",
  "unicorn/prefer-array-find: error",
  "unicorn/prefer-array-flat-map: error",
  "unicorn/prefer-array-flat: error",
  "unicorn/prefer-array-from-async: error",
  "unicorn/prefer-array-from-map: error",
  "unicorn/prefer-array-from-range: error",
  "unicorn/prefer-array-index-of: error",
  "unicorn/prefer-array-iterable-methods: error",
  "unicorn/prefer-array-last-methods: error",
  "unicorn/prefer-array-slice: error",
  "unicorn/prefer-array-some: error",
  "unicorn/prefer-bigint-literals: error",
  "unicorn/prefer-blob-reading-methods: error",
  "unicorn/prefer-block-statement-over-iife: error",
  "unicorn/prefer-boolean-return: error",
  "unicorn/prefer-class-fields: error",
  "unicorn/prefer-classlist-toggle: error",
  "unicorn/prefer-code-point: error",
  "unicorn/prefer-continue: error",
  "unicorn/prefer-date-now: error",
  "unicorn/prefer-default-parameters: error",
  "unicorn/prefer-direct-iteration: error",
  "unicorn/prefer-dom-node-append: error",
  "unicorn/prefer-dom-node-remove: error",
  "unicorn/prefer-dom-node-replace-children: error",
  "unicorn/prefer-dom-node-text-content: error",
  "unicorn/prefer-early-return: error",
  "unicorn/prefer-else-if: error",
  "unicorn/prefer-event-target: error",
  "unicorn/prefer-export-from: error",
  "unicorn/prefer-flat-math-min-max: error",
  "unicorn/prefer-get-or-insert-computed: error",
  "unicorn/prefer-global-number-constants: error",
  "unicorn/prefer-global-this: error",
  "unicorn/prefer-group-by: error",
  "unicorn/prefer-has-check: error",
  "unicorn/prefer-hoisting-branch-code: error",
  "unicorn/prefer-identifier-import-export-specifiers: error",
  "unicorn/prefer-includes-over-repeated-comparisons: error",
  "unicorn/prefer-includes: error",
  "unicorn/prefer-iterable-in-constructor: error",
  "unicorn/prefer-iterator-helpers: error",
  "unicorn/prefer-iterator-to-array-at-end: error",
  "unicorn/prefer-keyboard-event-key: error",
  "unicorn/prefer-location-assign: error",
  "unicorn/prefer-logical-operator-over-ternary: error",
  "unicorn/prefer-map-from-entries: error",
  "unicorn/prefer-math-abs: error",
  "unicorn/prefer-math-constants: error",
  "unicorn/prefer-math-min-max: error",
  "unicorn/prefer-math-trunc: error",
  "unicorn/prefer-modern-dom-apis: error",
  "unicorn/prefer-modern-math-apis: error",
  "unicorn/prefer-module: error",
  "unicorn/prefer-native-coercion-functions: error",
  "unicorn/prefer-negative-index: error",
  "unicorn/prefer-node-protocol: error",
  "unicorn/prefer-number-coercion: error",
  "unicorn/prefer-number-is-safe-integer: error",
  "unicorn/prefer-number-properties: error",
  "unicorn/prefer-object-define-properties: error",
  "unicorn/prefer-object-destructuring-defaults: error",
  "unicorn/prefer-object-from-entries: error",
  "unicorn/prefer-object-iterable-methods: error",
  "unicorn/prefer-observer-apis: error",
  "unicorn/prefer-optional-catch-binding: error",
  "unicorn/prefer-path2d: error",
  "unicorn/prefer-private-class-fields: error",
  "unicorn/prefer-promise-with-resolvers: error",
  "unicorn/prefer-prototype-methods: error",
  "unicorn/prefer-query-selector: error",
  "unicorn/prefer-queue-microtask: error",
  "unicorn/prefer-reflect-apply: error",
  "unicorn/prefer-regexp-test: error",
  "unicorn/prefer-response-static-json: error",
  "unicorn/prefer-scoped-selector: error",
  "unicorn/prefer-set-has: error",
  "unicorn/prefer-set-methods: error",
  "unicorn/prefer-set-size: error",
  "unicorn/prefer-simple-condition-first: error",
  "unicorn/prefer-simple-sort-comparator: error",
  "unicorn/prefer-simplified-conditions: error",
  "unicorn/prefer-single-array-predicate: error",
  "unicorn/prefer-single-call: error",
  "unicorn/prefer-single-object-destructuring: error",
  "unicorn/prefer-single-replace: error",
  "unicorn/prefer-smaller-scope: error",
  "unicorn/prefer-string-match-all: error",
  "unicorn/prefer-string-pad-start-end: error",
  "unicorn/prefer-string-raw: error",
  "unicorn/prefer-string-repeat: error",
  "unicorn/prefer-string-replace-all: error",
  "unicorn/prefer-string-slice: error",
  "unicorn/prefer-string-starts-ends-with: error",
  "unicorn/prefer-string-trim-start-end: error",
  "unicorn/prefer-structured-clone: error",
  "unicorn/prefer-switch: error",
  "unicorn/prefer-ternary: warn",
  "unicorn/prefer-toggle-attribute: error",
  "unicorn/prefer-top-level-await: error",
  "unicorn/prefer-type-error: error",
  "unicorn/prefer-type-literal-last: error",
  "unicorn/prefer-uint8array-base64: error",
  "unicorn/prefer-unary-minus: error",
  "unicorn/prefer-unicode-code-point-escapes: error",
  "unicorn/prefer-url-can-parse: error",
  "unicorn/prefer-url-href: error",
  "unicorn/prefer-url-search-parameters: error",
  "unicorn/prefer-while-loop-condition: error",
  "unicorn/relative-url-style: error",
  "unicorn/require-array-join-separator: error",
  "unicorn/require-array-sort-compare: error",
  "unicorn/require-css-escape: error",
  "unicorn/require-module-attributes: error",
  "unicorn/require-module-specifiers: error",
  "unicorn/require-number-to-fixed-digits-argument: error",
  "unicorn/require-passive-events: error",
  "unicorn/require-proxy-trap-boolean-return: error",
  "unicorn/switch-case-break-position: error",
  "unicorn/template-indent: error",
  "unicorn/text-encoding-identifier-case: error",
  "unicorn/throw-new-error: error",
  "unused-imports/no-unused-imports: error",
  "use-isnan: error",
  "valid-typeof: error",
]
`;

exports[`effective rule set react / prettier 1`] = `
[
  "@eslint-react/dom-no-dangerously-set-innerhtml-with-children: error",
  "@eslint-react/dom-no-dangerously-set-innerhtml: error",
  "@eslint-react/dom-no-find-dom-node: error",
  "@eslint-react/dom-no-missing-button-type: error",
  "@eslint-react/dom-no-missing-iframe-sandbox: error",
  "@eslint-react/dom-no-render-return-value: error",
  "@eslint-react/dom-no-script-url: error",
  "@eslint-react/dom-no-string-style-prop: error",
  "@eslint-react/dom-no-unknown-property: warn",
  "@eslint-react/dom-no-unsafe-target-blank: warn",
  "@eslint-react/dom-no-void-elements-with-children: error",
  "@eslint-react/jsx-no-children-prop: error",
  "@eslint-react/jsx-no-comment-textnodes: error",
  "@eslint-react/jsx-no-namespace: error",
  "@eslint-react/jsx-no-useless-fragment: warn",
  "@eslint-react/kit/jsx-boolean-value: error",
  "@eslint-react/kit/jsx-fragments: error",
  "@eslint-react/kit/jsx-no-duplicate-props: error",
  "@eslint-react/no-access-state-in-setstate: error",
  "@eslint-react/no-array-index-key: error",
  "@eslint-react/no-duplicate-key: warn",
  "@eslint-react/no-leaked-conditional-rendering: warn",
  "@eslint-react/no-missing-component-display-name: error",
  "@eslint-react/no-missing-key: error",
  "@eslint-react/no-nested-component-definitions: error",
  "@eslint-react/no-set-state-in-component-will-update: error",
  "@eslint-react/no-unstable-context-value: error",
  "@eslint-react/no-unstable-default-props: error",
  "@eslint-react/no-unused-props: error",
  "@eslint-react/no-unused-state: error",
  "@eslint-react/use-state: error",
  "@typescript-eslint/adjacent-overload-signatures: error",
  "@typescript-eslint/array-type: error",
  "@typescript-eslint/await-thenable: error",
  "@typescript-eslint/ban-ts-comment: error",
  "@typescript-eslint/ban-tslint-comment: error",
  "@typescript-eslint/class-literal-property-style: error",
  "@typescript-eslint/class-methods-use-this: error",
  "@typescript-eslint/consistent-generic-constructors: error",
  "@typescript-eslint/consistent-indexed-object-style: error",
  "@typescript-eslint/consistent-type-assertions: error",
  "@typescript-eslint/consistent-type-definitions: error",
  "@typescript-eslint/consistent-type-exports: error",
  "@typescript-eslint/consistent-type-imports: error",
  "@typescript-eslint/default-param-last: error",
  "@typescript-eslint/dot-notation: error",
  "@typescript-eslint/explicit-function-return-type: error",
  "@typescript-eslint/explicit-member-accessibility: error",
  "@typescript-eslint/explicit-module-boundary-types: error",
  "@typescript-eslint/member-ordering: error",
  "@typescript-eslint/method-signature-style: error",
  "@typescript-eslint/naming-convention: error",
  "@typescript-eslint/no-array-constructor: error",
  "@typescript-eslint/no-array-delete: error",
  "@typescript-eslint/no-base-to-string: error",
  "@typescript-eslint/no-confusing-non-null-assertion: error",
  "@typescript-eslint/no-confusing-void-expression: error",
  "@typescript-eslint/no-deprecated: error",
  "@typescript-eslint/no-duplicate-enum-values: error",
  "@typescript-eslint/no-duplicate-type-constituents: error",
  "@typescript-eslint/no-dynamic-delete: error",
  "@typescript-eslint/no-empty-function: error",
  "@typescript-eslint/no-empty-object-type: error",
  "@typescript-eslint/no-explicit-any: error",
  "@typescript-eslint/no-extra-non-null-assertion: error",
  "@typescript-eslint/no-extraneous-class: error",
  "@typescript-eslint/no-floating-promises: error",
  "@typescript-eslint/no-for-in-array: error",
  "@typescript-eslint/no-implied-eval: error",
  "@typescript-eslint/no-import-type-side-effects: error",
  "@typescript-eslint/no-inferrable-types: error",
  "@typescript-eslint/no-invalid-this: error",
  "@typescript-eslint/no-invalid-void-type: error",
  "@typescript-eslint/no-loop-func: error",
  "@typescript-eslint/no-meaningless-void-operator: error",
  "@typescript-eslint/no-misused-new: error",
  "@typescript-eslint/no-misused-promises: error",
  "@typescript-eslint/no-misused-spread: error",
  "@typescript-eslint/no-mixed-enums: error",
  "@typescript-eslint/no-namespace: error",
  "@typescript-eslint/no-non-null-asserted-nullish-coalescing: error",
  "@typescript-eslint/no-non-null-asserted-optional-chain: error",
  "@typescript-eslint/no-non-null-assertion: error",
  "@typescript-eslint/no-redundant-type-constituents: error",
  "@typescript-eslint/no-require-imports: error",
  "@typescript-eslint/no-restricted-imports: error",
  "@typescript-eslint/no-shadow: error",
  "@typescript-eslint/no-this-alias: error",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare: error",
  "@typescript-eslint/no-unnecessary-condition: error",
  "@typescript-eslint/no-unnecessary-qualifier: warn",
  "@typescript-eslint/no-unnecessary-template-expression: error",
  "@typescript-eslint/no-unnecessary-type-arguments: error",
  "@typescript-eslint/no-unnecessary-type-constraint: error",
  "@typescript-eslint/no-unnecessary-type-conversion: warn",
  "@typescript-eslint/no-unsafe-argument: error",
  "@typescript-eslint/no-unsafe-assignment: error",
  "@typescript-eslint/no-unsafe-call: error",
  "@typescript-eslint/no-unsafe-declaration-merging: error",
  "@typescript-eslint/no-unsafe-enum-comparison: error",
  "@typescript-eslint/no-unsafe-function-type: error",
  "@typescript-eslint/no-unsafe-member-access: error",
  "@typescript-eslint/no-unsafe-return: error",
  "@typescript-eslint/no-unsafe-unary-minus: error",
  "@typescript-eslint/no-unused-expressions: error",
  "@typescript-eslint/no-unused-vars: error",
  "@typescript-eslint/no-use-before-define: error",
  "@typescript-eslint/no-useless-constructor: error",
  "@typescript-eslint/no-useless-default-assignment: error",
  "@typescript-eslint/no-useless-empty-export: warn",
  "@typescript-eslint/no-wrapper-object-types: error",
  "@typescript-eslint/non-nullable-type-assertion-style: error",
  "@typescript-eslint/only-throw-error: error",
  "@typescript-eslint/parameter-properties: error",
  "@typescript-eslint/prefer-as-const: error",
  "@typescript-eslint/prefer-find: error",
  "@typescript-eslint/prefer-for-of: error",
  "@typescript-eslint/prefer-function-type: error",
  "@typescript-eslint/prefer-includes: error",
  "@typescript-eslint/prefer-literal-enum-member: error",
  "@typescript-eslint/prefer-namespace-keyword: error",
  "@typescript-eslint/prefer-nullish-coalescing: error",
  "@typescript-eslint/prefer-promise-reject-errors: error",
  "@typescript-eslint/prefer-readonly: warn",
  "@typescript-eslint/prefer-reduce-type-parameter: error",
  "@typescript-eslint/prefer-regexp-exec: error",
  "@typescript-eslint/prefer-return-this-type: error",
  "@typescript-eslint/prefer-string-starts-ends-with: error",
  "@typescript-eslint/promise-function-async: error",
  "@typescript-eslint/related-getter-setter-pairs: error",
  "@typescript-eslint/require-array-sort-compare: error",
  "@typescript-eslint/require-await: error",
  "@typescript-eslint/restrict-plus-operands: error",
  "@typescript-eslint/restrict-template-expressions: error",
  "@typescript-eslint/return-await: error",
  "@typescript-eslint/strict-boolean-expressions: error",
  "@typescript-eslint/switch-exhaustiveness-check: error",
  "@typescript-eslint/triple-slash-reference: error",
  "@typescript-eslint/unbound-method: error",
  "@typescript-eslint/unified-signatures: error",
  "@typescript-eslint/use-unknown-in-catch-callback-variable: error",
  "eqeqeq: warn",
  "for-direction: error",
  "import-x/consistent-type-specifier-style: warn",
  "import-x/default: error",
  "import-x/export: error",
  "import-x/extensions: error",
  "import-x/first: warn",
  "import-x/namespace: error",
  "import-x/newline-after-import: warn",
  "import-x/no-absolute-path: warn",
  "import-x/no-amd: error",
  "import-x/no-anonymous-default-export: error",
  "import-x/no-commonjs: error",
  "import-x/no-cycle: error",
  "import-x/no-deprecated: error",
  "import-x/no-duplicates: warn",
  "import-x/no-empty-named-blocks: warn",
  "import-x/no-extraneous-dependencies: error",
  "import-x/no-import-module-exports: warn",
  "import-x/no-mutable-exports: error",
  "import-x/no-named-as-default-member: warn",
  "import-x/no-named-as-default: warn",
  "import-x/no-namespace: warn",
  "import-x/no-relative-packages: warn",
  "import-x/no-self-import: error",
  "import-x/no-unassigned-import: error",
  "import-x/no-unresolved: error",
  "import-x/no-useless-path-segments: warn",
  "import-x/no-webpack-loader-syntax: error",
  "import-x/order: warn",
  "import-x/unambiguous: error",
  "no-async-promise-executor: error",
  "no-case-declarations: error",
  "no-compare-neg-zero: error",
  "no-cond-assign: error",
  "no-constant-binary-expression: error",
  "no-constant-condition: error",
  "no-control-regex: error",
  "no-debugger: error",
  "no-delete-var: error",
  "no-dupe-else-if: error",
  "no-duplicate-case: error",
  "no-empty-character-class: error",
  "no-empty-pattern: error",
  "no-empty-static-block: error",
  "no-empty: error",
  "no-ex-assign: error",
  "no-extra-boolean-cast: error",
  "no-fallthrough: error",
  "no-global-assign: error",
  "no-invalid-regexp: error",
  "no-irregular-whitespace: error",
  "no-loss-of-precision: error",
  "no-misleading-character-class: error",
  "no-nonoctal-decimal-escape: error",
  "no-octal: error",
  "no-prototype-builtins: error",
  "no-regex-spaces: error",
  "no-self-assign: error",
  "no-shadow-restricted-names: error",
  "no-sparse-arrays: error",
  "no-unassigned-vars: error",
  "no-unsafe-finally: error",
  "no-unsafe-optional-chaining: error",
  "no-unused-labels: error",
  "no-unused-private-class-members: error",
  "no-useless-assignment: error",
  "no-useless-backreference: error",
  "no-useless-catch: error",
  "no-useless-escape: error",
  "no-var: error",
  "prefer-const: error",
  "prefer-rest-params: error",
  "prefer-spread: error",
  "preserve-caught-error: error",
  "react-hooks/config: error",
  "react-hooks/error-boundaries: error",
  "react-hooks/exhaustive-deps: warn",
  "react-hooks/gating: error",
  "react-hooks/globals: error",
  "react-hooks/immutability: error",
  "react-hooks/incompatible-library: warn",
  "react-hooks/preserve-manual-memoization: error",
  "react-hooks/purity: error",
  "react-hooks/refs: error",
  "react-hooks/rules-of-hooks: error",
  "react-hooks/set-state-in-effect: error",
  "react-hooks/set-state-in-render: error",
  "react-hooks/static-components: error",
  "react-hooks/unsupported-syntax: warn",
  "react-hooks/use-memo: error",
  "react-hooks/void-use-memo: error",
  "react-refresh/only-export-components: error",
  "require-yield: error",
  "unicorn/better-dom-traversing: error",
  "unicorn/catch-error-name: error",
  "unicorn/consistent-assert: error",
  "unicorn/consistent-compound-words: error",
  "unicorn/consistent-conditional-object-spread: error",
  "unicorn/consistent-date-clone: error",
  "unicorn/consistent-empty-array-spread: error",
  "unicorn/consistent-existence-index-check: error",
  "unicorn/consistent-export-decorator-position: error",
  "unicorn/consistent-function-scoping: error",
  "unicorn/consistent-json-file-read: error",
  "unicorn/consistent-optional-chaining: error",
  "unicorn/consistent-template-literal-escape: error",
  "unicorn/consistent-tuple-labels: error",
  "unicorn/default-export-style: error",
  "unicorn/dom-node-dataset: error",
  "unicorn/error-message: error",
  "unicorn/escape-case: error",
  "unicorn/expiring-todo-comments: error",
  "unicorn/explicit-length-check: error",
  "unicorn/explicit-timer-delay: error",
  "unicorn/import-style: error",
  "unicorn/isolated-functions: error",
  "unicorn/logical-assignment-operators: error",
  "unicorn/new-for-builtins: error",
  "unicorn/no-abusive-eslint-disable: error",
  "unicorn/no-accessor-recursion: error",
  "unicorn/no-accidental-bitwise-operator: error",
  "unicorn/no-anonymous-default-export: error",
  "unicorn/no-array-callback-reference: error",
  "unicorn/no-array-concat-in-loop: error",
  "unicorn/no-array-fill-with-reference-type: error",
  "unicorn/no-array-from-fill: error",
  "unicorn/no-array-method-this-argument: error",
  "unicorn/no-array-reduce: error",
  "unicorn/no-array-reverse: error",
  "unicorn/no-array-sort-for-min-max: error",
  "unicorn/no-array-sort: error",
  "unicorn/no-array-splice: error",
  "unicorn/no-async-promise-finally: error",
  "unicorn/no-await-expression-member: error",
  "unicorn/no-await-in-promise-methods: error",
  "unicorn/no-blob-to-file: error",
  "unicorn/no-boolean-sort-comparator: error",
  "unicorn/no-canvas-to-image: error",
  "unicorn/no-chained-comparison: error",
  "unicorn/no-collection-bracket-access: error",
  "unicorn/no-computed-property-existence-check: error",
  "unicorn/no-confusing-array-splice: error",
  "unicorn/no-confusing-array-with: error",
  "unicorn/no-console-spaces: error",
  "unicorn/no-constant-zero-expression: error",
  "unicorn/no-declarations-before-early-exit: error",
  "unicorn/no-document-cookie: error",
  "unicorn/no-double-comparison: error",
  "unicorn/no-duplicate-if-branches: error",
  "unicorn/no-duplicate-logical-operands: error",
  "unicorn/no-duplicate-loops: error",
  "unicorn/no-duplicate-set-values: error",
  "unicorn/no-empty-file: error",
  "unicorn/no-error-property-assignment: error",
  "unicorn/no-exports-in-scripts: error",
  "unicorn/no-for-each: error",
  "unicorn/no-for-loop: error",
  "unicorn/no-global-object-property-assignment: error",
  "unicorn/no-immediate-mutation: error",
  "unicorn/no-impossible-length-comparison: error",
  "unicorn/no-incorrect-query-selector: error",
  "unicorn/no-incorrect-template-string-interpolation: error",
  "unicorn/no-instanceof-builtins: error",
  "unicorn/no-invalid-argument-count: error",
  "unicorn/no-invalid-character-comparison: error",
  "unicorn/no-invalid-fetch-options: error",
  "unicorn/no-invalid-remove-event-listener: error",
  "unicorn/no-invalid-well-known-symbol-methods: error",
  "unicorn/no-late-current-target-access: error",
  "unicorn/no-late-event-control: error",
  "unicorn/no-lonely-if: error",
  "unicorn/no-loop-iterable-mutation: error",
  "unicorn/no-magic-array-flat-depth: error",
  "unicorn/no-mismatched-map-key: error",
  "unicorn/no-misrefactored-assignment: error",
  "unicorn/no-multiple-promise-resolver-calls: error",
  "unicorn/no-named-default: error",
  "unicorn/no-negated-array-predicate: error",
  "unicorn/no-negated-comparison: error",
  "unicorn/no-negation-in-equality-check: error",
  "unicorn/no-new-array: error",
  "unicorn/no-new-buffer: error",
  "unicorn/no-object-as-default-parameter: error",
  "unicorn/no-object-methods-with-collections: error",
  "unicorn/no-optional-chaining-on-undeclared-variable: error",
  "unicorn/no-process-exit: error",
  "unicorn/no-redundant-comparison: error",
  "unicorn/no-return-array-push: error",
  "unicorn/no-selector-as-dom-name: error",
  "unicorn/no-shorthand-property-overrides: error",
  "unicorn/no-single-promise-in-promise-methods: error",
  "unicorn/no-subtraction-comparison: error",
  "unicorn/no-thenable: error",
  "unicorn/no-this-assignment: error",
  "unicorn/no-this-outside-of-class: error",
  "unicorn/no-transition-all: error",
  "unicorn/no-uncalled-method: error",
  "unicorn/no-undeclared-class-members: error",
  "unicorn/no-unnecessary-array-flat-depth: error",
  "unicorn/no-unnecessary-array-flat-map: error",
  "unicorn/no-unnecessary-array-splice-count: error",
  "unicorn/no-unnecessary-await: error",
  "unicorn/no-unnecessary-boolean-comparison: error",
  "unicorn/no-unnecessary-fetch-options: error",
  "unicorn/no-unnecessary-global-this: error",
  "unicorn/no-unnecessary-nested-ternary: error",
  "unicorn/no-unnecessary-polyfills: error",
  "unicorn/no-unnecessary-slice-end: error",
  "unicorn/no-unnecessary-splice: error",
  "unicorn/no-unnecessary-string-trim: error",
  "unicorn/no-unreadable-array-destructuring: error",
  "unicorn/no-unreadable-for-of-expression: error",
  "unicorn/no-unreadable-iife: error",
  "unicorn/no-unreadable-object-destructuring: error",
  "unicorn/no-unsafe-buffer-conversion: error",
  "unicorn/no-unsafe-promise-all-settled-values: error",
  "unicorn/no-unsafe-property-key: error",
  "unicorn/no-unsafe-sqlite-interpolation: error",
  "unicorn/no-unsafe-string-replacement: warn",
  "unicorn/no-unused-array-method-return: error",
  "unicorn/no-useless-boolean-cast: error",
  "unicorn/no-useless-coercion: error",
  "unicorn/no-useless-collection-argument: error",
  "unicorn/no-useless-compound-assignment: error",
  "unicorn/no-useless-concat: error",
  "unicorn/no-useless-continue: error",
  "unicorn/no-useless-delete-check: error",
  "unicorn/no-useless-else: error",
  "unicorn/no-useless-error-capture-stack-trace: error",
  "unicorn/no-useless-fallback-in-spread: error",
  "unicorn/no-useless-iterator-to-array: error",
  "unicorn/no-useless-length-check: error",
  "unicorn/no-useless-logical-operand: error",
  "unicorn/no-useless-override: error",
  "unicorn/no-useless-promise-resolve-reject: error",
  "unicorn/no-useless-re-export: error",
  "unicorn/no-useless-recursion: error",
  "unicorn/no-useless-spread: error",
  "unicorn/no-useless-switch-case: error",
  "unicorn/no-useless-template-literals: error",
  "unicorn/no-useless-undefined: error",
  "unicorn/no-xor-as-exponentiation: error",
  "unicorn/no-zero-fractions: error",
  "unicorn/numeric-separators-style: error",
  "unicorn/operator-assignment: error",
  "unicorn/prefer-abort-signal-any: error",
  "unicorn/prefer-abort-signal-timeout: error",
  "unicorn/prefer-add-event-listener-options: error",
  "unicorn/prefer-add-event-listener: error",
  "unicorn/prefer-aggregate-error: error",
  "unicorn/prefer-array-find: error",
  "unicorn/prefer-array-flat-map: error",
  "unicorn/prefer-array-flat: error",
  "unicorn/prefer-array-from-async: error",
  "unicorn/prefer-array-from-map: error",
  "unicorn/prefer-array-from-range: error",
  "unicorn/prefer-array-index-of: error",
  "unicorn/prefer-array-iterable-methods: error",
  "unicorn/prefer-array-last-methods: error",
  "unicorn/prefer-array-slice: error",
  "unicorn/prefer-array-some: error",
  "unicorn/prefer-bigint-literals: error",
  "unicorn/prefer-blob-reading-methods: error",
  "unicorn/prefer-block-statement-over-iife: error",
  "unicorn/prefer-boolean-return: error",
  "unicorn/prefer-class-fields: error",
  "unicorn/prefer-classlist-toggle: error",
  "unicorn/prefer-code-point: error",
  "unicorn/prefer-continue: error",
  "unicorn/prefer-date-now: error",
  "unicorn/prefer-default-parameters: error",
  "unicorn/prefer-direct-iteration: error",
  "unicorn/prefer-dom-node-append: error",
  "unicorn/prefer-dom-node-remove: error",
  "unicorn/prefer-dom-node-replace-children: error",
  "unicorn/prefer-dom-node-text-content: error",
  "unicorn/prefer-early-return: error",
  "unicorn/prefer-else-if: error",
  "unicorn/prefer-event-target: error",
  "unicorn/prefer-export-from: error",
  "unicorn/prefer-flat-math-min-max: error",
  "unicorn/prefer-get-or-insert-computed: error",
  "unicorn/prefer-global-number-constants: error",
  "unicorn/prefer-global-this: error",
  "unicorn/prefer-group-by: error",
  "unicorn/prefer-has-check: error",
  "unicorn/prefer-hoisting-branch-code: error",
  "unicorn/prefer-identifier-import-export-specifiers: error",
  "unicorn/prefer-includes-over-repeated-comparisons: error",
  "unicorn/prefer-includes: error",
  "unicorn/prefer-iterable-in-constructor: error",
  "unicorn/prefer-iterator-helpers: error",
  "unicorn/prefer-iterator-to-array-at-end: error",
  "unicorn/prefer-keyboard-event-key: error",
  "unicorn/prefer-location-assign: error",
  "unicorn/prefer-logical-operator-over-ternary: error",
  "unicorn/prefer-map-from-entries: error",
  "unicorn/prefer-math-abs: error",
  "unicorn/prefer-math-constants: error",
  "unicorn/prefer-math-min-max: error",
  "unicorn/prefer-math-trunc: error",
  "unicorn/prefer-modern-dom-apis: error",
  "unicorn/prefer-modern-math-apis: error",
  "unicorn/prefer-module: error",
  "unicorn/prefer-native-coercion-functions: error",
  "unicorn/prefer-negative-index: error",
  "unicorn/prefer-node-protocol: error",
  "unicorn/prefer-number-coercion: error",
  "unicorn/prefer-number-is-safe-integer: error",
  "unicorn/prefer-number-properties: error",
  "unicorn/prefer-object-define-properties: error",
  "unicorn/prefer-object-destructuring-defaults: error",
  "unicorn/prefer-object-from-entries: error",
  "unicorn/prefer-object-iterable-methods: error",
  "unicorn/prefer-observer-apis: error",
  "unicorn/prefer-optional-catch-binding: error",
  "unicorn/prefer-path2d: error",
  "unicorn/prefer-private-class-fields: error",
  "unicorn/prefer-promise-with-resolvers: error",
  "unicorn/prefer-prototype-methods: error",
  "unicorn/prefer-query-selector: error",
  "unicorn/prefer-queue-microtask: error",
  "unicorn/prefer-reflect-apply: error",
  "unicorn/prefer-regexp-test: error",
  "unicorn/prefer-response-static-json: error",
  "unicorn/prefer-scoped-selector: error",
  "unicorn/prefer-set-has: error",
  "unicorn/prefer-set-methods: error",
  "unicorn/prefer-set-size: error",
  "unicorn/prefer-simple-condition-first: error",
  "unicorn/prefer-simple-sort-comparator: error",
  "unicorn/prefer-simplified-conditions: error",
  "unicorn/prefer-single-array-predicate: error",
  "unicorn/prefer-single-call: error",
  "unicorn/prefer-single-object-destructuring: error",
  "unicorn/prefer-single-replace: error",
  "unicorn/prefer-smaller-scope: error",
  "unicorn/prefer-string-match-all: error",
  "unicorn/prefer-string-pad-start-end: error",
  "unicorn/prefer-string-raw: error",
  "unicorn/prefer-string-repeat: error",
  "unicorn/prefer-string-replace-all: error",
  "unicorn/prefer-string-slice: error",
  "unicorn/prefer-string-starts-ends-with: error",
  "unicorn/prefer-string-trim-start-end: error",
  "unicorn/prefer-structured-clone: error",
  "unicorn/prefer-switch: error",
  "unicorn/prefer-ternary: warn",
  "unicorn/prefer-toggle-attribute: error",
  "unicorn/prefer-top-level-await: error",
  "unicorn/prefer-type-error: error",
  "unicorn/prefer-type-literal-last: error",
  "unicorn/prefer-uint8array-base64: error",
  "unicorn/prefer-unary-minus: error",
  "unicorn/prefer-unicode-code-point-escapes: error",
  "unicorn/prefer-url-can-parse: error",
  "unicorn/prefer-url-href: error",
  "unicorn/prefer-url-search-parameters: error",
  "unicorn/prefer-while-loop-condition: error",
  "unicorn/relative-url-style: error",
  "unicorn/require-array-join-separator: error",
  "unicorn/require-array-sort-compare: error",
  "unicorn/require-css-escape: error",
  "unicorn/require-module-attributes: error",
  "unicorn/require-module-specifiers: error",
  "unicorn/require-number-to-fixed-digits-argument: error",
  "unicorn/require-passive-events: error",
  "unicorn/require-proxy-trap-boolean-return: error",
  "unicorn/switch-case-break-position: error",
  "unicorn/text-encoding-identifier-case: error",
  "unicorn/throw-new-error: error",
  "unused-imports/no-unused-imports: error",
  "use-isnan: error",
  "valid-typeof: error",
]
`;
